--- a/articles/rfi/999967.md
+++ b/articles/rfi/999967.md
@@ -1,5 +1,5 @@
-<!--1713545104000-->
-[德国逮捕2俄间谍计划攻击美军基地](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0)
+<!--1713552301000-->
+[G7承诺“加强乌克兰的防空力量”](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-g7%E6%89%BF%E8%AF%BA-%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F)
 ------
 
-<div>18/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/7c78ebe4-fdc4-11ee-a0fd-005056bfb2b6/w:1280/p:16x9/66210160d77c5330d1724475.png"><p><strong></strong></p><div><p>两名嫌犯是在德国东南部的拜罗伊特(Bayreuth)被拘捕的。德国检方18ri 表示，2名德俄双重国籍人士因涉嫌策划在德国进行蓄意破坏攻击而被捕，两人锁定目标包括美国军事设施，目的为了削弱德国对乌克兰的军事支持。</p><p>检察官说，这两名男子的名字仅证实为狄特尔S.（Dieter S.）和亚历山大 J.（Alexander J.）。正在布鲁塞尔开会的德国总理朔尔茨表示，“我们永远不会接受间谍活动在德国发生”。 俄罗斯方面则在其驻德国大使馆在 X 上发布的消息，谴责这种“荒唐可笑”以及缺乏“证据”的指控。</p><p>据《明镜周刊》报道，嫌疑人以及德国联邦国防军车队尤其关注巴伐利亚美军格拉芬沃尔(Grafenwöhr)基地，乌克兰士兵在那里接受使用美国艾布拉姆斯主战坦克的训练。</p><p>据《明镜周刊》报道，主嫌犯迪特尔·S. (Dieter S.) 现年 39 岁，自 2023 年 10 月以来一直在与一名与俄罗斯情报部门有联系的人员交换信息，以期在德国领土上实施可能的破坏活动。 据检方称，他的同伙亚历山大·J.(Alexander J.)现年 37 岁，从 2024 年 3 月底开始和迪特尔有密切的联系。</p><p>检察官称，“这些行动的目的尤其是破坏德国对乌克兰对抗俄罗斯侵略战争的军事支持”。 据报道，迪特·S. 声称自己准备好“对德国的军事基础设施和工业场所进行爆炸袭击和纵火袭击”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt3.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%25BE%25B7%25E5%259B%25BD%25E9%2580%25AE%25E6%258D%25952%25E4%25BF%2584%25E9%2597%25B4%25E8%25B0%258D%25E8%25AE%25A1%25E5%2588%2592%25E6%2594%25BB%25E5%2587%25BB%25E7%25BE%258E%25E5%2586%259B%25E5%259F%25BA%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt3.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 19:04</div><img src="https://s.rfi.fr/media/display/00846dda-fe3f-11ee-958f-005056a97e36/w:1280/p:16x9/G7%20ITALY%20APRIL%20A.jpg"><p><strong>七国集团（G7）外长周五表示，在俄罗斯袭击摧毁电力基础设施并造成数百人死亡之后，七国集团决心加强乌克兰的防空能力。        </strong></p><div><p>G7外长们表示，七国集团 "将加强乌克兰的防空能力，以拯救生命和保护重要基础设施"，并补充说他们将增加对基辅的防务和安全援助。</p><p>周五在意大利南部卡普里岛举行的为期三天的部长会议结束时发表了七国集团声明，会议期间讨论的主要问题包括乌克兰问题以及以色列和伊朗之间的军事对抗。据路透社报道，G7外长们补充说，"我们决心继续向乌克兰及其人民提供军事、财政、政治、人道主义、经济和发展支持"。</p><p>G7外长会议结束时，美国国务卿安东尼-布林肯表示，乌克兰急需额外资源，并警告北京，如果中国支持俄罗斯国防工业，将危及中国与欧洲的关系。</p><p>近几个月来，对乌克兰的军事援助已经放缓，欧洲合作伙伴明显缺乏武器弹药，而美国的重要资金在国会被共和党人卡住。</p><p>另一个关键问题是如何利用俄罗斯在西方持有的约3,000 亿美元主权资产的衍生利益来帮助乌克兰，而此时欧盟成员国正对此举的合法性举棋不定。</p><p>七国集团（G7）外长表示，他们将继续探讨如何利用被冻结的俄罗斯资产来帮助乌克兰。</p><p>北约秘书长延斯-斯托尔滕贝格（Jens Stoltenberg）周四在意大利卡普里小岛举行的七国集团外长会议间隙强调，乌克兰"迫切需要增加防空能力"。他向G7外长们说，由于俄罗斯对乌克兰城镇和基础设施的空袭，当地局势"困难重重"，因此"北约成员国保持并加强其支持至关重要"。</p><p>这位北约秘书长表示，他最近注意到北约成员国宣布提供军事援助的"令人鼓舞"的迹象，包括美国众议院预计周六投票通过向基辅提供 610 亿欧元援助的一揽子计划。</p><p>斯托尔滕贝格先生在乌克兰外交事务负责人库列巴（Dmytro Kouleba）应邀参加的乌克兰问题会议前补充道说："我们本应更早地给予他们更多"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3Y.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-g7%25E6%2589%25BF%25E8%25AF%25BA-%25E5%258A%25A0%25E5%25BC%25BA%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%259A%2584%25E9%2598%25B2%25E7%25A9%25BA%25E5%258A%259B%25E9%2587%258F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAX3Y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAX3Y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3Y.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
