--- a/articles/rfi/999961.md
+++ b/articles/rfi/999961.md
@@ -1,5 +1,5 @@
-<!--1713552303000-->
-[以色列被指对伊朗发动攻击 伊朗中部听到剧烈爆炸声](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0)
+<!--1713554102000-->
+[【视频】巴黎新桥：塞纳河上最古老的桥梁](https://www.rfi.fr/cn/%E9%AD%85%E5%8A%9B%E6%B3%95%E5%85%B0%E8%A5%BF/20240419-%E8%A7%86%E9%A2%91-%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5-%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81)
 ------
 
-<div>19/04/2024 - 10:18</div><img src="https://s.rfi.fr/media/display/97390bd4-fe0b-11ee-8376-005056bf30b7/w:1280/p:16x9/000_34PR6GE.jpg"><p><strong>伊朗中部周五凌晨听到剧烈爆炸声，以色列军方拒绝置评，美媒披露以色列向美国预告了这次袭击。        </strong></p><div><p>以色列周五夜间对伊朗发动了攻击。据德黑兰官方“法尔斯”通讯社报道，周五黎明时分，伊朗中部一个军事基地附近发生了三起爆炸事件。据伊朗国家电视台报道，中部伊斯法罕省听到了"巨大的爆炸声"，爆炸原因尚不清楚。</p><p>伊朗立即启动了多个省份的防空系统。伊朗当局表示，无人机已被击落，但"迄今为止 "没有发生导弹袭击。</p><p>不过，伊朗的“塔斯-尼姆”通讯社周五援引"消息灵通人士"说，在伊朗听到爆炸声后，"没有外国袭击的消息"。该通讯社称，"与以色列媒体的谣言和说法相反"，"没有任何关于外国对“伊斯法罕”中心城市或任何其他地区发动袭击的消息"。伊朗领导人尚未就爆炸事件公开发表评论。</p><p>据美国媒体报道，美国高级官员称，以色列对伊朗发动袭击是为了报复上周末以色列遭到的史无前例的无人机和导弹袭击。</p><p>白宫没有立即发表评论。但美国全国广播公司（NBC）和美国有线电视新闻网（CNN）分别援引熟悉此事的消息人士和一名美国官员的话报道说，以色列已提前向华盛顿发出了袭击警告，但美国没有同意这次行动，也没有参与实施。"据 CNN 报道，一名美国官员说："我们没有同意报复行动。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和无人机，以色列警告称将进行报复。在伊朗袭击上周末袭击以色列之前，伊朗驻大马士革领事馆遭袭击，德黑兰认为以色列负有责任。</p><p>以色列军方在周五早晨宣布，以色列北部已启动警报。</p><p>以色列军队发言人就爆炸事件告诉法新社记者："我们目前不予置评。</p><p>不过，以色列极右翼的国家安全部长本-格-维-尔（Ben Gvir）在 X 上发布一句话说"软弱！"</p><p>伊朗总统易卜拉欣-拉伊西（Ebrahim Raissi）本周曾表示，以色列对伊朗领土的任何攻击"都将遭到严厉回应"。</p><p>伊朗周四在联合国安理会表示，"必须迫使以色列停止针对我们利益的任何进一步军事冒险主义"，而联合国秘书长则警告说，中东正处于"最危险的时刻"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWwW.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AB%25E6%258C%2587%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E5%258F%2591%25E5%258A%25A8%25E6%2594%25BB%25E5%2587%25BB-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E5%2590%25AC%25E5%2588%25B0%25E5%2589%25A7%25E7%2583%2588%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0%20-%20https%3A%2F%2Frfi.my%2FAWwW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0%20-%20https%3A%2F%2Frfi.my%2FAWwW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWwW.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 18:18</div><img src="https://s.rfi.fr/media/display/17ae80ac-15d4-11ea-9423-005056bf7c53/w:1280/p:16x9/Embarras%20Pont%20Neuf_0.jpg"><p><strong>新桥是目前巴黎现存最古老的桥梁。 它也是第一座跨越整个塞纳河河面的桥梁。        </strong></p><div><p>在新桥建成之前，巴黎的桥梁主要是用木头建造的，因此极易失火。</p><p>新桥保留了建桥时巴黎人自发给它起的名字。 修建这座桥的决定是在1577 年做出的，当时的国王亨利三世任命了一个委员会，来确保桥梁的修建得当并对工程施工进行监督。</p><p>直到 18 世纪，新桥一直是巴黎这座城市的中心，也是许多街头艺人和商贩的最爱。桥上总是热闹非凡。</p><p>新桥两边的桥栏上有 384 个怪面装饰，是古代神话故事中森林或乡间神灵的头像，每个头像重达100多公斤。</p><p>随着时间的推移，原来的怪面装饰的某些部分已经损坏，雕像的细节因风化而模糊，因此它们需要全部更换进行修复。</p><p>历时13年的新桥修复工程在2007年揭幕，恰逢新桥建成 400 周年，以示纪念。</p><p>所以，今天看到的桥上雕像都是复制品。 不过，如有兴趣，可前往巴黎市立历史博物馆——卡纳瓦雷博物馆，在那里欣赏到这些雕像的原件。</p><p>新桥的设计和支撑桥身的拱门让人联想到罗马建筑。 桥上人行道的设计灵感也来自罗马道路。</p><p>新桥也是巴黎最早铺设人行道的桥梁之一，当时铺设人行道是为了保护行人避雨和马车溅起的泥浆之用。</p><p>这座桥自1889年起就被列为历史古迹。1991年，它和巴黎塞纳河两岸河沿一起被联合国教科文组织列入世界文化遗产名录。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX35.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%25AD%2585%25E5%258A%259B%25E6%25B3%2595%25E5%2585%25B0%25E8%25A5%25BF%2F20240419-%25E8%25A7%2586%25E9%25A2%2591-%25E5%25B7%25B4%25E9%25BB%258E%25E6%2596%25B0%25E6%25A1%25A5-%25E5%25A1%259E%25E7%25BA%25B3%25E6%25B2%25B3%25E4%25B8%258A%25E6%259C%2580%25E5%258F%25A4%25E8%2580%2581%25E7%259A%2584%25E6%25A1%25A5%25E6%25A2%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81%20-%20https%3A%2F%2Frfi.my%2FAX35.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81%20-%20https%3A%2F%2Frfi.my%2FAX35.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX35.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
