--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
 <!--1713541502000-->
-[七国集团：乌克兰需更多防空支援](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2-%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4)
+[印度大选启动投票，莫迪能否蝉联第三任期6月初见分晓](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240419-%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93)
 ------
 
-<div>18/04/2024 - 22:59</div><img src="https://s.rfi.fr/media/display/6384d6b2-f1e3-11ee-bf58-005056bfb2b6/w:1280/p:16x9/2024-04-03T152832Z_1197154583_RC23Z6A28JCI_RTRMADP_3_NATO-FOREIGN.JPG"><p><strong></strong></p><div><p>德国总理朔尔茨出访中国前与遭受俄罗斯入侵的乌克兰总统泽连斯基通电话，告知德国计划追加提供6个美制爱国者地空导弹系统到给乌克兰。</p><p>乌克兰外长库列巴18日在意大利卡普里岛呼吁七国集团应该像对以色列那样向乌克兰提供更多的防空系统。库列巴认为西方国家对以色列和乌克兰采取了两种不同的策略。目前美国等七国集团国家的外长正在卡普里岛举行会议。</p><p>七国集团（G7）部长们4月18日在意大利卡普里岛进行第二天会谈，首先讨论中东危机，下午将把注意力转向乌克兰，北约首脑和乌克兰外交部长也参与其中。</p><p>欧盟外交政策负责人博雷尔敦促欧盟国家提供防空系统，帮助乌克兰保护城市免受俄罗斯的攻击，否则乌克兰的电力系统将被摧毁。“没有一个国家可以在住家、工厂和网络等都失去电力的情况下进行战斗。”</p><p>乌克兰外交部长库列巴说，西方对以色列的态度与乌克兰不同，当伊朗袭击以色列时，美国和盟友协助击落了这些导弹和无人机。“以色列的合作伙伴战略似乎是防止损害和死亡……在过去的几个月里，乌克兰的合作伙伴战略则是帮助乌克兰从损害中重振。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtG.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B8%2583%25E5%259B%25BD%25E9%259B%2586%25E5%259B%25A2-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E9%259C%2580%25E6%259B%25B4%25E5%25A4%259A%25E9%2598%25B2%25E7%25A9%25BA%25E6%2594%25AF%25E6%258F%25B4&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtG.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 14:11</div><img src="https://s.rfi.fr/media/display/0606e2ba-fe30-11ee-9710-005056bfb2b6/w:1280/p:16x9/2024-04-19T075100Z_1586901846_RC2F97A5NAJV_RTRMADP_3_INDIA-ELECTION.JPG"><p><strong>印度大选19日起陆续在全国各地展开，一直持续到6月1日。9亿多选民将选出543名国会下院议员。从目前情况看，已经连续两届总理任期的莫迪身后的人民党有望再次在国会获得多数席位，让莫迪蝉联第三任期。        </strong></p><div><p>印度全国大选被看作是全球规模最大的投票活动。全国有9亿6千800万选民，超过美国、欧洲联盟以及俄罗斯合计总人口。投票活动全程历时一个多月，分七个阶段进行。检票活动在6月4日才全面展开。通常情况下，结果当天即可揭晓。</p><p>恒河沿岸重要朝圣城市赫里德瓦尔（Haridwar）是首批启动投票的地区之一。总理莫迪当天向选民，尤其是年青选民发出呼吁，希望他们踊跃投票。</p><p>最大反对党、曾常年把持政权的国大党也同天呼吁选民投票，以便“告别通货膨胀，告别失业，告别仇恨，告别不公”。</p><p>从目前情况来看，已经73岁的现任总理莫迪有望再次获胜，蝉联第三个任期。美国独立民调机构皮尤研究中心2023年的一项调查显示，担任总理已经近十年的莫迪仍然享有近80%的民意支持。</p><p>十年间，印度在莫迪领导下在国际舞台影响力提升，并跃居世界第五大经济体。在中美两大国全面战略竞争的背景下，印度成为西方国家无论是战略部署，还是企业投资，竞相争取的对象。</p><p>但莫迪任下的印度也越来越远离西方国家的民主标准。莫迪大力助长了印度教民族主义势力，引发国内不同宗教信仰族群间的紧张关系。在这次投票活动启动前不久，莫迪还亲自出席了一座供奉印度教神灵的寺庙的落成典礼。而这所寺庙修建在被印度教狂热分子摧毁的一座有数千年历史的清真寺地址上。</p><p>莫迪政府也加强了对反对声音的打压。许多反对派人士或者遭遇犯罪调查，或者被关入监狱。今年2月，国大党的银行账户被金融监管部门冻结。反对派各政党试图联合抗衡的努力看来效果不彰，到目前为止尚没有推出可能出任总理的人选。</p><p>国际非政府团体“无疆界记者”组织的报告认为，莫迪2014年上台以来，印度在新闻自由度年度排行中倒退了21位，在180个国家和地区中排行第161。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzM.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240419-%25E5%258D%25B0%25E5%25BA%25A6%25E5%25A4%25A7%25E9%2580%2589%25E5%2590%25AF%25E5%258A%25A8%25E6%258A%2595%25E7%25A5%25A8%25EF%25BC%258C%25E8%258E%25AB%25E8%25BF%25AA%25E8%2583%25BD%25E5%2590%25A6%25E8%259D%2589%25E8%2581%2594%25E7%25AC%25AC%25E4%25B8%2589%25E4%25BB%25BB%25E6%259C%259F6%25E6%259C%2588%25E5%2588%259D%25E8%25A7%2581%25E5%2588%2586%25E6%2599%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzM.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
