--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713494701000-->
-[马克龙将在索邦大学阐述欧洲建设蓝图](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240418-%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE)
+<!--1713498301000-->
+[赖清德5.20前 台湾国民党议员前赴后继去中国表“善意”但拆台](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240418-%E8%B5%96%E6%B8%85%E5%BE%B75-20%E5%89%8D-%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8-%E5%96%84%E6%84%8F-%E4%BD%86%E6%8B%86%E5%8F%B0)
 ------
 
-<div>18/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/e83356da-fdc4-11ee-a404-005056bf30b7/w:1280/p:16x9/1210255_f9d58008605d47c681b8e6106950b050-0-9bdf4d006d41448fb01c2420a3c54c68.png"><p><strong></strong></p><div><p>2017年9月26日，马克龙曾在巴黎索邦大学发表演讲，提出一系列重塑欧盟的建议主张，希望在今后几年建立一个“主权、统一和民主的欧盟”。马克龙认为，欧盟当前面临许多重大挑战，在防务安全、移民问题、发展问题、气候变化、数字革命和全球经济一体化等方面都需要作出重大政策调整。为此，马克龙提出了一系列具体建议。</p><p>针对日益严重的恐怖主义威胁，马克龙主张建立欧盟统一的防务安全体系，在2020年前建立一支欧盟共同干预部队，设立欧盟统一防务预算、欧盟反恐检察部门和情报共享机制。马克龙认为，欧盟共同干预部队是对北约的一个补充，但是需要有独立的行动能力。</p><p>马克龙还向欧盟发出了充满活力的呼吁，称欧盟多年来缺乏长期愿景，深陷官僚主义和过度监管的泥潭。 他在长达一个半小时的演讲中表示，欧洲“太弱、太慢、太低效”。 对欧盟的这一呼吁令许多合作伙伴感到惊讶，首先是德国前总理默克尔(Angela Merkel)，当时她刚刚再次当选，进行了数月的谈判才组建了政府联盟。</p><p>在欧洲议会选举上，执政党领军人远远落后于极右派。4月初，法国伊佛普民调机构调查显示，极右翼国民联盟的巴德拉(Jordan Bardella)继续领先，支持率超过30%，远远领先于他的主要竞争对手执政的复兴党海耶尔(Valérie Hayer)。</p><p>近来，海耶尔的支持率不但没有上升，反从此前的19%下降到18%左右，与极右派的国民联盟差距拉大，显示海耶尔在欧盟议会竞选开始时采取的旨在攻击国民联盟的策略并没有奏效，也没有引发公众舆论的共鸣。</p><p>索邦大学二次演讲也有揭露极右虚伪一面的意图。法国总统马克龙回答记者提问时并没有提及极右派。马克龙表示：“我认为，我们目前正在经历很多恐惧和担忧，不加思考的简单回应有时候会满足愤世嫉俗的群体”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240418-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E5%25B0%2586%25E5%259C%25A8%25E7%25B4%25A2%25E9%2582%25A6%25E5%25A4%25A7%25E5%25AD%25A6%25E9%2598%2590%25E8%25BF%25B0%25E6%25AC%25A7%25E6%25B4%25B2%25E5%25BB%25BA%25E8%25AE%25BE%25E8%2593%259D%25E5%259B%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE%20-%20https%3A%2F%2Frfi.my%2FAWt6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE%20-%20https%3A%2F%2Frfi.my%2FAWt6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 16:56</div><img src="https://s.rfi.fr/media/display/218be9b6-5261-11ee-b729-005056a90321/w:1280/p:16x9/AP23235304939235.jpg"><p><strong>台湾各种立场媒体均聚焦国民党立委傅崐萁将率领党内立委访问中国，该团人数透露为20人。此前，台湾立法院国民党团被抓包作弊匿名顶替不在场议员卢县一投票，曝出卢县一当天人在中国秘密行踪。再此前，消息传台湾立法院长国民党人韩国瑜被邀请组团前往中国访问。再再此前，多家消息称，马英九后台湾另一国民党政治大佬或要访问中国。这些互动被冠以民间善意促进沟通。但此善意也被怀疑是对赖清德5.20任职拆台破坏，吃里扒外。        </strong></p><div><p>据上报消息，国民党立委傅崐萁将率领党内立委访问中国，国民党文传会主委李彦秀昨天表示此行程由傅崐萁个人规划并安排，不过国民党今天（18日）澄清，傅崐萁等人访中行程将针对台湾人民关心的两岸民生经济议题，进行充分沟通与交流，并反映多数台湾民意期望两岸和平交流的心声，维系两岸人民的利益与福祉。</p><p>国民党指出，傅崐萁于今年2月开始联系访中事宜，国民党乐见国会同志肩负起维系两岸民间良善对话的责任，也对于台湾人民关心的农渔产品行销、旅游观光等民生经济议题，与对岸进行协调与讨论，期望达到让两岸人民互惠双赢的目标。</p><p>据国民党强调，向来支持与对岸维系正常公开的交流与沟通，相信唯有增进两岸良性互动与累积善意，才能让台海免于战争的危险边缘，促进区域的和平稳定。</p><p>据新头壳消息，台湾立法院司法及法制委员会今天并案审查《刑法》加重虐童刑责等10案，邀请蔡碧仲等人列席报告并备质询。吴思瑶质询提问，上周五在立院表决时发生投票舞弊事件，当天卢县一出访中国，未至立院出席、签到，却有表决纪录；若此案进入地检署侦查或法院审理，应该会请相关当事人过去询问，包括议事人员、涉及立委等。</p><p>台湾没有消息提及卢县一前往中国事宜。是公干还是私事，一无所知。</p><p>据新头壳稍早消息，继马习二会后，中国再度出招？据媒体透露，北京当局除了规划由国民党团总召傅崐萁组团访中后，在立院8月休会时，将邀请立法院长韩国瑜组团出访，将由中国人大委员长赵乐际亲自接待。</p><p>国民党立院党团总召傅崐萁近日将率20多名蓝委访问中国，由于时程仍在立院开议期间，遭外界批评是“薪水小偷”，国民党中央日前记者会更切割，强调行程内容党中央并不知情。</p><p>民进党团干事长吴思瑶进一步说好奇，责问傅崐萁这次带队率领蓝委去中国，到底是谁的授权？又是代表谁？</p><p>台湾媒体没有提及国民党议员前往中国是受国台办还是受中国人大邀请。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWq1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240418-%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B75-20%25E5%2589%258D-%25E5%258F%25B0%25E6%25B9%25BE%25E5%259B%25BD%25E6%25B0%2591%25E5%2585%259A%25E8%25AE%25AE%25E5%2591%2598%25E5%2589%258D%25E8%25B5%25B4%25E5%2590%258E%25E7%25BB%25A7%25E5%258E%25BB%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A1%25A8-%25E5%2596%2584%25E6%2584%258F-%25E4%25BD%2586%25E6%258B%2586%25E5%258F%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0%20-%20https%3A%2F%2Frfi.my%2FAWq1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0%20-%20https%3A%2F%2Frfi.my%2FAWq1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWq1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
