--- a/articles/rfi/999986.md
+++ b/articles/rfi/999986.md
@@ -1,5 +1,5 @@
 <!--1713494701000-->
-[菲美肩并肩军演实弹击沉中国造退役军舰](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240418-%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0)
+[马克龙将在索邦大学阐述欧洲建设蓝图](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240418-%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE)
 ------
 
-<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/0e6b372e-e821-11ed-8ba9-005056a90284/w:1280/p:16x9/2023-04-29T210724Z_124636285_RC2BMW9Q52NU_RTRMADP_3_USA-PHILIPPINES.JPG"><p><strong>当地时间 4 月 22 日至 5 月 8 日，美国和菲律宾将举行本年度“肩并肩”联合军事演习，此次演习可能有多达 1 万 7 千人参加，主要有来自美国、菲律宾、澳洲和法国的武装部队。消息称，在“击沉演习”部分，演习击沉目标选定为退役的菲律宾海军补给舰“卡里拉亚湖”号，而此舰原是中国制造、菲律宾企业所使用的民用油船，是菲律宾唯一的“中国造海军资产”。        </strong></p><div><p>据新头壳今天引述中媒《观察者网》今（18）日消息，负责此次演习的菲律宾陆军上校和发言人洛吉科（Michael Logico）近期在记者会上公布，此次演习将创造诸多“第一”，除了人数创下历年最高，菲律宾海岸警卫队（PCG）也将首次参加演习，演习还将首次在菲律宾 12 海里领海以外展开，并将模拟“夺回被敌对势力占领的岛屿”等场景。另外在“击沉演习”部分，演习击沉目标选定为退役的菲律宾海军补给舰“卡里拉亚湖”号。</p><p>据该消息，值得注意的是，这艘军舰原是中国制造、菲律宾企业所使用的民用油船，是菲律宾唯一的“中国造海军资产”。对此菲军坚称，此举“并非有意为之”，这不代表向特定国家发出信号。洛吉科强调，这场联合军演不针对任何外国，包括中国。</p><p>此次演习还有另一个重点“后勤演习”，包括测试空运美国海军标准 6 型（SM-6）防空导弹系统的可行性。</p><p>今年“肩并肩”演习将有至少 1 万 6 千人一同参与，其中包括 1 万 1 千名美军士兵和 5 千名菲律宾武装部队士兵，其余人则将来自法国海军和澳洲国防军。这一总人数预计将超过去年的 1 万 6 千人，去年的参演人员主要来自美军和菲律宾武装部队。</p><p>该报引述洛吉科称，包括东盟、欧盟和日本在内的其他 14 个国家和组织，将针对演习派出“观察员”。洛吉科补充，今年演习将测试菲律宾武装部队与外国部队的“互操作性”，这一概念是由菲律宾国防部长特奥多罗（Gilberto Teodoro）提出，特奥多罗声称，这将使菲律宾武装部队从内部防御转向外部防御，或者从打击当地叛乱转向打击外国敌人。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240418-%25E8%258F%25B2%25E7%25BE%258E%25E8%2582%25A9%25E5%25B9%25B6%25E8%2582%25A9%25E5%2586%259B%25E6%25BC%2594%25E5%25AE%259E%25E5%25BC%25B9%25E5%2587%25BB%25E6%25B2%2589%25E4%25B8%25AD%25E5%259B%25BD%25E9%2580%25A0%25E9%2580%2580%25E5%25BD%25B9%25E5%2586%259B%25E8%2588%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0%20-%20https%3A%2F%2Frfi.my%2FAWpZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0%20-%20https%3A%2F%2Frfi.my%2FAWpZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/e83356da-fdc4-11ee-a404-005056bf30b7/w:1280/p:16x9/1210255_f9d58008605d47c681b8e6106950b050-0-9bdf4d006d41448fb01c2420a3c54c68.png"><p><strong></strong></p><div><p>2017年9月26日，马克龙曾在巴黎索邦大学发表演讲，提出一系列重塑欧盟的建议主张，希望在今后几年建立一个“主权、统一和民主的欧盟”。马克龙认为，欧盟当前面临许多重大挑战，在防务安全、移民问题、发展问题、气候变化、数字革命和全球经济一体化等方面都需要作出重大政策调整。为此，马克龙提出了一系列具体建议。</p><p>针对日益严重的恐怖主义威胁，马克龙主张建立欧盟统一的防务安全体系，在2020年前建立一支欧盟共同干预部队，设立欧盟统一防务预算、欧盟反恐检察部门和情报共享机制。马克龙认为，欧盟共同干预部队是对北约的一个补充，但是需要有独立的行动能力。</p><p>马克龙还向欧盟发出了充满活力的呼吁，称欧盟多年来缺乏长期愿景，深陷官僚主义和过度监管的泥潭。 他在长达一个半小时的演讲中表示，欧洲“太弱、太慢、太低效”。 对欧盟的这一呼吁令许多合作伙伴感到惊讶，首先是德国前总理默克尔(Angela Merkel)，当时她刚刚再次当选，进行了数月的谈判才组建了政府联盟。</p><p>在欧洲议会选举上，执政党领军人远远落后于极右派。4月初，法国伊佛普民调机构调查显示，极右翼国民联盟的巴德拉(Jordan Bardella)继续领先，支持率超过30%，远远领先于他的主要竞争对手执政的复兴党海耶尔(Valérie Hayer)。</p><p>近来，海耶尔的支持率不但没有上升，反从此前的19%下降到18%左右，与极右派的国民联盟差距拉大，显示海耶尔在欧盟议会竞选开始时采取的旨在攻击国民联盟的策略并没有奏效，也没有引发公众舆论的共鸣。</p><p>索邦大学二次演讲也有揭露极右虚伪一面的意图。法国总统马克龙回答记者提问时并没有提及极右派。马克龙表示：“我认为，我们目前正在经历很多恐惧和担忧，不加思考的简单回应有时候会满足愤世嫉俗的群体”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240418-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E5%25B0%2586%25E5%259C%25A8%25E7%25B4%25A2%25E9%2582%25A6%25E5%25A4%25A7%25E5%25AD%25A6%25E9%2598%2590%25E8%25BF%25B0%25E6%25AC%25A7%25E6%25B4%25B2%25E5%25BB%25BA%25E8%25AE%25BE%25E8%2593%259D%25E5%259B%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE%20-%20https%3A%2F%2Frfi.my%2FAWt6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE%20-%20https%3A%2F%2Frfi.my%2FAWt6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
