--- a/articles/rfi/999955.md
+++ b/articles/rfi/999955.md
@@ -1,5 +1,5 @@
 <!--1713586502000-->
-[应网信办要求 苹果从中国应用商店下架WhatsApp和Threads](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82-%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6whatsapp%E5%92%8Cthreads)
+[G7外长声明：台海和平对国际安全繁荣不可或缺](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-g7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E-%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA)
 ------
 
-<div>19/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/ba5e9202-e847-11ee-9d09-005056a90284/w:1280/p:16x9/AP24082277039710.jpg"><p><strong>苹果公司4月19日表示，已将Meta公司旗下的应用程序WhatsApp和Threads从其在中国的应用商店下架，原因是中国政府以国家安全为由下令下架。        </strong></p><div><p>路透社报导指，根据应用程序跟踪公司七麦数据和AppMagic的数据，Telegram和Signal这两款外国通信应用程序也于周五被下架。这四款应用程序的下架表明，中央政府至少对一些不受其控制的外国在线信息服务越来越不能容忍。这也预示着苹果在中国的回旋余地越来越小。</p><p>尽管如此，根据路透社周五的查看，包括Facebook、Instagram和Messenger在内的其他Meta公司旗下的应用程序仍可下载。由西方公司开发的许多其他流行应用程序，包括YouTube和X（原推特），也可以下载。目前尚不清楚WhatsApp或Threads如何引起中国当局的安全担忧。</p><p>苹果公司在一封电子邮件声明中说：“基于他们的国家安全考虑，国家互联网信息办公室下令从中国店面下架这些应用程序”。该声明说：“我们有义务遵守我们运营所在国家的法律，即使我们有不同意见”。Meta公司拒绝发表评论，并将询问转给了苹果公司。</p><p>苹果公司没有回应就Signal和Telegram发表评论的请求。这两家通信应用程序公司的代表没有立即回复路透社的置评请求。国家互联网信息办公室也没有立即回复置评请求。</p><p>上述四款应用程序在中国都没有被广泛使用，腾讯的微信是目前在华最主要的通信服务应用。这些应用程序和许多外国应用程序在中国网络上通常被防火墙屏蔽，只能通过VPN或其他代理工具使用。</p><p>这四款应用程序在香港和澳门仍然可用。一些中国科技行业的专家说，政府对WhatsApp和Threads下达的命令可能与去年8月的一项新规定有关，该规定要求所有在中国上市的应用程序都必须向政府注册，否则将面临被下架的风险。公司完成注册的截止日期是3月底，该规定于4月1日生效。</p><p>苹果公司曾从中国应用商店下架过应用程序。2017年，苹果下架了《纽约时报》的新闻应用程序，称其违反了当地法规，此举正值世界第二大经济体新闻审查制度不断加强之际。该应用在苹果中国应用商店仍无法下载。去年，当中国政府正在制定有关人工智能生成服务的地方法规时，苹果下架了一些类似于ChatGPT的应用程序。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4u.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E5%25BA%2594%25E7%25BD%2591%25E4%25BF%25A1%25E5%258A%259E%25E8%25A6%2581%25E6%25B1%2582-%25E8%258B%25B9%25E6%259E%259C%25E4%25BB%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%25BA%2594%25E7%2594%25A8%25E5%2595%2586%25E5%25BA%2597%25E4%25B8%258B%25E6%259E%25B6whatsapp%25E5%2592%258Cthreads&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads%20-%20https%3A%2F%2Frfi.my%2FAX4u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads%20-%20https%3A%2F%2Frfi.my%2FAX4u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4u.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 23:36</div><img src="https://s.rfi.fr/media/display/e93c5330-fe94-11ee-baca-005056bf30b7/w:1280/p:16x9/2024-04-18T164639Z_978736951_RC2497AQO4K6_RTRMADP_3_G7-ITALY-FOREIGN.JPG"><p><strong>七国集团（G7）外长会议在意大利结束议程后发表声明指出，台海和平稳定对国际社会安全与繁荣至关重要，呼吁以和平方式解决。七国集团外长会议并"强烈关切"中国企业向俄罗斯转移军民两用原材料和可用于制造武器的零组件，这些材料和零件被莫斯科用于军事扩张。        </strong></p><div><p>G7外长会议17至19日在意大利卡普里岛（Capri）举行，G7外长周五在会后发表"应对全球挑战、促进合作伙伴关系"的共同声明。</p><p>在台海议题方面，声明指出，台海和平稳定对国际社会的安全与繁荣不可或缺，呼吁两岸议题必须用和平方式解决。</p><p>中央社援引声明指出，G7成员支持台湾以观察员、或来宾的身份，有意义参与非以国家身份为前提的国际组织，包括世界卫生大会（WHA）、世界卫生组织（WHO）技术会议。声明指出，G7成员对台湾的基本立场没有改变，包括现行的一中政策。</p><p>此外，美国国务卿布林肯在单独召开的记者会上指出，G7成员在台海、南海、朝鲜半岛和平与稳定的立场一致，也团结对抗中国不公平、非市场性的行为。</p><p>布林肯表示，G7成员国都非常关切中国产能过剩的问题，他称，"这些问题使我们的市场充斥大量补贴、因而价格偏低的新产品和技术，不仅逼走我们的企业，他们也企图主导这些市场"。</p><p>此外，七国集团外长周五表示，"强烈关切"中国企业向俄罗斯转移军民两用原材料和可用于制造武器的零组件，这些材料和零件被莫斯科用于军事扩张。</p><p>法新社报导，七国集团外长在会议声明中说："这使俄罗斯能够重建和振兴其国防工业基础，对乌克兰和国际和平与安全构成威胁。中国应确保停止这种支持。"</p><p>此前，欧盟委员会负责贸易政策的副主席东布罗夫斯基斯（Valdis Dombrovskis）在华盛顿表示，欧盟看到有迹象显示中国正在供应可让俄罗斯用于制造武器的零组件，担心如果西方阻止俄罗斯入侵乌克兰的决心削弱，中国可能会扩大交付零组件。</p><p>东布罗夫斯基斯表示，他此行访问华盛顿将会见美国国会议员，以强调批准等候已久的美国军援乌克兰的重要性。</p><p>美国官员上周针对中国正在提供给俄罗斯的零件材料向媒体简报，包括无人机和导弹技术、卫星影像和工具机，这些材料有助于俄罗斯建立其军事力量，使打了两年的俄乌战争得以延续。</p><p>东布罗夫斯基斯在美国智库研究机构"外交关系协会"（Council on Foreign Relations）一场活动上表示，欧盟正在与美国合作打击对俄罗斯制裁的规避行为。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5K.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-g7%25E5%25A4%2596%25E9%2595%25BF%25E5%25A3%25B0%25E6%2598%258E-%25E5%258F%25B0%25E6%25B5%25B7%25E5%2592%258C%25E5%25B9%25B3%25E5%25AF%25B9%25E5%259B%25BD%25E9%2599%2585%25E5%25AE%2589%25E5%2585%25A8%25E7%25B9%2581%25E8%258D%25A3%25E4%25B8%258D%25E5%258F%25AF%25E6%2588%2596%25E7%25BC%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=G7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E%EF%BC%9A%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAX5K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=G7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E%EF%BC%9A%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAX5K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5K.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=G7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E%EF%BC%9A%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
