--- a/articles/rfi/999972.md
+++ b/articles/rfi/999972.md
@@ -1,5 +1,5 @@
-<!--1713543301000-->
-[伊朗中部传爆炸声  是以色列报复？看美联社如何分析](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240419-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0-%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D-%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90)
+<!--1713545102000-->
+[在美国，“中国钢铁危害成了竞选的一个招式” - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240418-%E5%9C%A8%E7%BE%8E%E5%9B%BD%EF%BC%8C-%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%B1%E5%AE%B3%E5%B7%B2%E6%88%90%E4%B8%BA%E7%AB%9E%E9%80%89%E7%9A%84%E4%B8%80%E4%B8%AA%E6%8B%9B%E5%BC%8F)
 ------
 
-<div>19/04/2024 - 15:21</div><img src="https://s.rfi.fr/media/display/d33d9a5e-1266-11ea-b20a-005056a99247/w:1280/p:16x9/2018-07-16t122734z_63342907_rc14637277c0_rtrmadp_3_iran-haj-khamenei.jpg"><p><strong>周五（4月19号）清晨，伊朗在发现无人机后向伊斯法罕附近的一个主要空军基地和一个核设施发射了防空系统，这些无人机被怀疑是以色列袭击的一部分，以报复德黑兰对该国前所未有的无人机和导弹袭击。但没有伊朗官员直接承认以色列发动袭击的可能性，以色列军方也没有回应置评请求。据报周五是伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日。        </strong></p><div><p>美联社海湾和伊朗新闻主任乔恩-甘布雷尔（Jon Gambrell）报道称："伊朗在该国中部地区发射了防空系统，这似乎是以色列对几天前德黑兰发动的袭击的某种回应。现在，我们所知道的还很零散。截至今天上午，伊朗已经停止了航班飞行，防空系统也已经启动，人们听到了伊斯法罕附近的爆炸声。伊斯法罕附近有一个大型空军基地，伊朗在那里拥有1979年伊斯兰革命前购买的F-14 "雄猫 "战斗机。这里还有一个重要的核设施。伊朗并没有说这是一次袭击。他们对此轻描淡写。他们今天在国家电视台上试图拿这件事开玩笑。但在此之前，德黑兰发动了一次袭击，向以色列发射了数百架无人机和导弹，而在此之前，以色列在叙利亚发动了另一次袭击，杀害了伊朗准军事革命卫队的成员。"</p><p>对于伊朗的低调，乔恩-甘布雷尔引述分析人士称，这可能是伊朗试图避嫌，避免局势升级的一次尝试。伊朗对以色列的袭击是史无前例的，而今天的袭击似乎没有造成任何严重破坏。但这确实表明以色列有能力向伊朗发射无人机，而且今天还是伊朗最高领袖阿亚图拉-阿里-哈梅内伊的85岁生日。因此，分析人士称，这可能是对伊朗的一个警告，即以色列仍有能力在未来发动袭击。</p><p>« 纽约时报》援引匿名以色列官员的话称，这次袭击发生在伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日之际。</p><p>上周六晚间，伊朗发射了数百架无人机、弹道导弹和巡航导弹，发动了前所未有的袭击，使中东更接近一场地区性战争。以色列军方发言人表示，发射次数超过 300 次，但其中 99% 被拦截。</p><p>美联社今天报道称，伊朗总统当天访问伊朗城市达姆甘时称，最近针对以色列的导弹和无人机袭击是伊朗“自豪和力量的源泉”。莱西说：“这次行动成为伊斯兰共和国及其武装部队力量的标志。它也显示了我们国家钢铁般的决心。”</p><p>莱西声称这次袭击是必要的，并团结了该国的政治派别。</p><p>法新社包袋，有媒体援引美国高级官员的话称，以色列周五的袭击是为了报复上周末针对以色列的史无前例的无人机和导弹袭击。然而，伊朗塔斯尼姆通讯社援引 "消息灵通人士 "的话说，"没有关于外国袭击的消息"。</p><p>一些国家和国际组织仍然谨慎地作出反应，呼吁保持克制。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0l.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240419-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E4%25BC%25A0%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0-%25E6%2598%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E6%258A%25A5%25E5%25A4%258D-%25E7%259C%258B%25E7%25BE%258E%25E8%2581%2594%25E7%25A4%25BE%25E5%25A6%2582%25E4%25BD%2595%25E5%2588%2586%25E6%259E%2590&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0l.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 00:47</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。                    </strong></p><div><p>周四法国世界报发表的一篇文章表示，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。</p><p>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。顺便，拜登也对被唐纳德·特朗普的演讲给打动了的工人阶级发起了新的魅力攻势。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。</p><p>相关的文章写道，在20世纪70年代之前，宾夕法尼亚州的匹兹堡，是让美国国家工业变得伟大的一个地方，随后，却遭受了去工业化的蹂躏，可以说是美国“铁锈带”的核心。4月17日星期三，美国总统选择了匹兹堡这个“铁锈带”的核心地点，对中国钢铁倾销发起了攻击，同时，也对受到特朗普在美国总统选举的摇摆州所发表的演讲所迷惑的工人阶级，发起了新的魅力攻势。乔·拜登当天在钢铁工人工会的总部宣布，他希望对从中国进口的钢铁和铝所征收的税率是如今的三倍，目前的税率是7.5%。中国的钢铁产量占世界的近一半，存在巨大的产能过剩，中国钢铁基本产品的价格只有美国钢铁制造商的一半，以钢铁为基础的中国工业制品如汽车、风力涡轮机等充斥着市场。白宫坚称，这一切还对碳排放的减少，非常不利。</p><p>美国总统拜登在X社交网络上宣称：“我希望与中国竞争，而不是冲突。”拜登还向钢铁工人工会重申了他希望工会能够参与到捍卫“美国制造”的行动中去。同时，拜登还反对将美国钢铁公司出售给日本的新日铁公司，拜登表示，“一个多世纪以来”，美国钢铁公司都是一个“标志性公司”，它“必须继续是一个美国公司”。拜登还表示，像特朗普一样，他已经做好了准备，制止美国联邦外国投资委员会目前正在审查的这项售卖行动。</p><p><strong>持续性的、全方位施压</strong></p><p>法国世界报的文章表示，自2016年以来，中国钢铁的危害已成为了美国竞选活动中的一个招式。在拜登的作为总统候选人所发表的有关日本和中国的演讲中，不乏机会主义，甚至是厚颜无耻。诚然，新日铁是日本公司，但日本是美国坚定不移的盟友。至于中国的钢铁威胁，如果我们相信美国人口普查局的数据的话，那么，是不存在中国钢铁威胁的：因为，根据美国人口普查局的数据，美国进口的中国钢铁很少，只占其采购量的3%；美国钢铁协会的数据甚至显示，中国钢铁在美国钢铁采购中只占2.1%！</p><p>但是，华盛顿决定对中国施加永久性的、全方位的压力。与“芯片之战”相比，“钢铁之战”根本不算什么。华盛顿以国家安全的为名，正在尽一切努力、包括对其盟友施加压力，以便让北京没有可能来获得最新一代的电子芯片。</p><p>拜登指责习近平把先进的芯片用于“错误的地方”。习近平则认为，用的地方很对：是为了让中国在2050年成为世界领先的经济、科技和军事强国。</p><p>中国梦是美国的噩梦。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
