--- a/articles/rfi/999980.md
+++ b/articles/rfi/999980.md
@@ -1,5 +1,5 @@
-<!--1713532503000-->
-[美国宇航局局长警告：中国利用民用项目掩盖太空军事存在](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A-%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8)
+<!--1713537902000-->
+[阿根廷与北约建立伙伴关系迈出第一步](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5)
 ------
 
-<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/c28e1990-fd67-11ee-b1f8-005056a97e36/w:1280/p:16x9/AP23117711747550.jpg"><p><strong>美国宇航局局长比尔·尼尔森 4 月 17 日在华盛顿表达了对中国秘密航天进展的担忧。他警告说，中国通过利用民用项目来掩盖军事目标以增强其太空能力，并警告华盛顿必须保持警惕。         </strong></p><div><p>中国在航空航天领域的进步，尤其是其不透明的做法，令美国宇航局感到担忧。比尔·尼尔森告诉国会山议员，中国对其太空进展“非常非常保密”，并警告“我们正在一场竞赛”。尼尔森怀疑中国的民用太空计划实际上隐藏着军事计划，这凸显了北京缺乏透明度。</p><p>美国宇航局局长比尔·尼尔森在国会山对议员们说：“中国取得了非凡的进步，特别是在过去十年中，但它们非常非常保密。”</p><p>尼尔森说：“我们认为，他们很多所谓的民用太空计划都是军事计划。我认为，实际上，我们正在进行一场竞赛。”</p><p>他说他希望北京能够“清醒过来，明白民用空间是用于和平用途”，但他补充说：“我们还没有看到中国表现出这一点。”</p><p>尼尔森是在众议院拨款委员会就 NASA 2025 年预算作证时发表上述言论的。</p><p>他表示，美国应该在中国之前再次登陆月球，因为两国都在执行月球任务。但他表示担心，如果北京先到达，可能会说：“好吧，这是我们的领土，你别进来。”</p><p>尼尔森此前表示，美国正在与中国“进行太空竞赛”，并警告说，中国最终可能声称“拥有”月球资源丰富的地区。</p><p>2022年，中国航天计划建成了地球轨道空间站，并实施了多次绕月和样本回收任务。</p><p>此后，美国一直计划通过阿耳忒弥斯三号任务在 2026 年将宇航员送回月球。中国表示希望在2030年之前将人类送上月球。</p><p>尼尔森表示，他相信美国不会失去其在太空探索方面的“全球优势”。</p><p>他说美国必须现实一点，因为“中国确实投入了大量资金，他们的预算还有很大的增长空间。“ 但 “我认为我们最好不要放松警惕。”</p><p>据美国国防情报局称，中国目前有 499 颗卫星在轨运行。这个数字是 2019 年的两倍多。中国还正在开发间谍气球和高超音速导弹。</p><p>《阿耳忒弥斯协定》是由美国宇航局和美国国务院起草一项要求太空活动必须出于和平目的的协议，已由包括英国在内的 40 多个国家签署。中国尚未签署这些协议。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpb.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AE%2587%25E8%2588%25AA%25E5%25B1%2580%25E5%25B1%2580%25E9%2595%25BF%25E8%25AD%25A6%25E5%2591%258A-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2588%25A9%25E7%2594%25A8%25E6%25B0%2591%25E7%2594%25A8%25E9%25A1%25B9%25E7%259B%25AE%25E6%258E%25A9%25E7%259B%2596%25E5%25A4%25AA%25E7%25A9%25BA%25E5%2586%259B%25E4%25BA%258B%25E5%25AD%2598%25E5%259C%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpb.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 15:09</div><img src="https://s.rfi.fr/media/display/6f37adba-fe4d-11ee-8194-005056bf30b7/w:1280/p:16x9/le%20secr%C3%A9taire%20g%C3%A9n%C3%A9ral%20d%C3%A9l%C3%A9gu%C3%A9%20Mircea%20Geoan%C4%83re%C3%A7u%20le%20ministre%20argentin%20de%20la%20D%C3%A9fense%20Luis%20Petriau%20si%C3%A8ge%20de%20l%E2%80%99OTAN%2018042024.PNG"><p><strong>北约副秘书长吉瓦纳(Mircea Geoană)4月18日在布鲁塞尔北约总部与阿根廷国防部长佩特里(Luis Petri)会面，双方讨论了北约与阿根廷之间伙伴关系的未来发展方向。        </strong></p><div><p>据北约网站4月19日更新的声明说，北约副秘书长米尔恰-吉瓦纳先生说：“我今天非常高兴地欢迎阿根廷国防部长。阿根廷是拉丁美洲的重要一员，我欢迎该国申请成为北约的合作伙伴。北约正在与世界各国合作，促进和平与稳定。阿根廷和北约都将受益于更密切的政治和务实合作”。</p><p>两位领导人还讨论了欧洲和拉丁美洲面临的安全挑战。北约副秘书长感谢阿根廷向乌克兰提供大量人道主义援助，特别是食品和药品，以及向难民提供的帮助。</p><p>这个声明说，北约与阿根廷的政治对话始于20世纪90年代初。布宜诺斯艾利斯随后为北约领导的波黑和平支援行动做出了贡献。哥伦比亚目前是北约在拉丁美洲的唯一伙伴国。而北约与阿根廷建立任何正式伙伴关系的决定都需要其32个盟国达成共识。</p><p>另据美联社说，阿根廷周四正式申请成为北约的合作伙伴。阿根廷总统米莱（Javier Milei）领导的右翼政府正致力于加强与北约成员国的关系并吸引投资，而这一合作伙伴地位将为加强阿根廷与西方的政治和安全合作扫清道路。</p><p>据介绍，对于那些不在北约地理区域内、无需参加集体军事行动的国家来说，“合作伙伴”是一个比"盟友"更有价值的角色。北约成员国目前仅限于欧洲、土耳其、加拿大和美国。</p><p>阿根廷总统府表示，北约这一指定，可使阿根廷获得以前无法获得的先进技术、安全系统和培训。</p><p>而北约副秘书长吉瓦纳在北约总部说，"阿根廷在拉丁美洲扮演着重要的角色"。双方"更紧密的政治和务实合作将使我们双方受益"。</p><p><strong>阿根廷购买丹麦F-16战机</strong></p><p>据法新社消息，丹麦和阿根廷本周二宣布，丹麦将向阿根廷出售24架二手F-16战斗机，阿根廷称，此次购买是其"过去50年中最重要的军事采购"。</p><p>在阿根廷国防部长佩特里访问丹麦的斯克里德斯特鲁普（Skrydstrup）空军基地期间，双方正式签署了这份军购协议。今年3月份双方公布了该交易的意向声明。</p><p>据丹麦媒体报道，丹麦正在将其机队升级为更现代化的 F-35。丹麦拥有大约40架F-16，其中约 30 架正在服役。丹麦也是北约的创建国之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E9%2598%25BF%25E6%25A0%25B9%25E5%25BB%25B7%25E4%25B8%258E%25E5%258C%2597%25E7%25BA%25A6%25E5%25BB%25BA%25E7%25AB%258B%25E4%25BC%2599%25E4%25BC%25B4%25E5%2585%25B3%25E7%25B3%25BB%25E8%25BF%2588%25E5%2587%25BA%25E7%25AC%25AC%25E4%25B8%2580%25E6%25AD%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
