--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-20 [张3丰的世界｜川渝燃气危机：一切鬼鬼祟祟都是犯罪](/articles/cdt/341468.md)
+
+4-20 [看客inSight｜漂在非洲的中国商人，在恐惧中等待暴富神话](/articles/cdt/341471.md)
+
 4-20 [剑客写字的地方｜把悲哀当笑料，并不高明](/articles/cdt/341475.md)
 
 4-20 [每日一语 2024.4.19](/articles/cdt/341479.md)
@@ -596,8 +600,4 @@
 3-18 [【CDT周报】第161期：一纸通稿真能代替现场报道吗？不能。](/articles/cdt/342566.md)
 
 3-17 [海边的西塞罗｜包青天就算复活，哭拜他的人也一定不会喜欢](/articles/cdt/342577.md)
-
-4-1 [【中国哭墙】倏忽四载，恍若一梦（3月1日-3月31日，2024年）](/articles/cdt/342579.md)
-
-3-17 [家传研究员｜本想哭庙求公正，岂料包公被强搬](/articles/cdt/342583.md)
 
