--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-20 [马斯克：特斯拉全自动驾驶（FSD）可能会很快进入中国](/articles/voa/1016243.md)
+
+4-20 [美参议院在最后期限前通过延长《外国情报监视法》授权案](/articles/voa/1016244.md)
+
 4-20 [所罗门群岛现总理保住议席 选举结果下星期出炉，与中国关系成关键](/articles/voa/1016245.md)
 
 4-20 [撰写129页校园枪击“宣言”，马里兰华裔高中生被捕](/articles/voa/1016246.md)
@@ -596,8 +600,4 @@
 4-9 [日全食的奇异景象在全美掀起热潮 拜登暗讽特朗普曾不带防护镜：别犯傻](/articles/voa/1016541.md)
 
 4-9 [澳总理称日本不会很快加入AUKUS “目前没有计划增员”](/articles/voa/1016542.md)
-
-4-9 [日本首相抵达美国 开启备受期待的访问](/articles/voa/1016543.md)
-
-4-9 [美参议院共和党领袖敦促对限制TikTok的法案采取行动](/articles/voa/1016544.md)
 
