--- a/articles/rfi/999998.md
+++ b/articles/rfi/999998.md
@@ -1,5 +1,5 @@
-<!--1713444302000-->
-[法国总理阿塔尔上任一百天了 政绩如何？ - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240418-%E6%B3%95%E5%9B%BD%E6%80%BB%E7%90%86%E9%98%BF%E5%A1%94%E5%B0%94%E4%B8%8A%E4%BB%BB%E4%B8%80%E7%99%BE%E5%A4%A9%E4%BA%86-%E6%94%BF%E7%BB%A9%E5%A6%82%E4%BD%95)
+<!--1713451513000-->
+[港府疑以行政手段消弭法庭裁决 记协获批就车牌查册新安排违宪提覆核](https://www.rfi.fr/cn/%E9%A6%99%E6%B8%AF/20240418-%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3-%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8)
 ------
 
-<div>18/04/2024 - 14:03</div><img src="https://s.rfi.fr/media/display/b0a32400-f006-11ee-8629-005056a90284/w:1280/p:16x9/2024-03-27T202323Z_336472124_RC2OP6A8S2QK_RTRMADP_3_FRANCE-UNEMPLOYMENT-ATTAL.JPG"><p><strong>周四（4月18号）是法国总理加布里埃尔-阿塔尔被任命100天，各报均对这个主题有大幅报道和分析。根据咨询公司Odoxa-Backbone Consulting 为《费加罗报》所做的最新民意调查，法国人虽然对总理的行为持批评态度，但对他的个人魅力表示认可。                    </strong></p><div><p>根据这份民调， 48%的法国人认为他是一位好总理，但他的形象在多个方面都在下滑：68%的法国人认为他充满活力，下降两个百分点，但认为他有魅力或贴近民众关切的人分别为45%和44%, 均有所下降。</p><p>在他入职后的总政策演讲中，新总理曾定下了基调：包括"重塑法国"、"取消对员工的补贴"、创造住房 "供应冲击"、"去行政官僚化"......在抵达马蒂尼翁一百天后，现在到了阿塔尔做一个小总结的时候了。各报自然对他的政策亮点进行了点评和期望。</p><p><strong>青年暴力和教育问题</strong></p><p>右翼《费加罗报》指出，加布里埃尔-阿塔尔（Gabriel Attal）希望在本周四纪念他上任100天之际，利用他在马蒂尼翁的权威，他要前往埃松省（Essonne）的维利-沙蒂永（Viri-Châtillon），之所以选择这个城市，是因为十天前在该市的一个中学校门口，发生了一名15岁的少年被人殴打致死而震惊法国舆论的惨案。阿塔尔将发表题为"“关于共和国核心权力”的演讲，试图消除人们的疑虑。但尽管这位前教育部长似乎曾带来了典范式的转变，但在世俗主义受到质疑的背景下，青少年暴力事件数量仍在令人担忧地增加。</p><p>左翼《解放报》指出，自1月9日上任以来，总理一直在应对动荡的预算形势和国民议会中脆弱的相对多数。为了坚持自己的立场，政府首脑寄希望于恢复权威，尤其是在青年和教育问题上。</p><p>《费加罗报》指出，糟糕的政府政绩和公共财政的急剧恶化，正在为他作为政府首脑的第一步成果蒙上阴影，尽管在这些问题上，他此前的声望一直很高。阿塔尔意识到自己在国民议会中并不占绝对多数，因此自上任以来一直没有提交任何重要立法。这让他的一些部下感到不耐烦，一些人呼吁 "重新启动立法机器"。为了回应对总理言行不一的指责，各部长办公室于周二晚间接到指示，要求他们准备视觉资料，在社交网络上列出总理的成就。</p><p><strong>空洞的一百天</strong></p><p>《解放报》的一篇评论更指出，加布里埃尔-阿塔尔在总理府的一百天，是空洞的一百天：既不左，也不由，什么都不是。总统马克龙的第四任总理上任三个月后，其沟通方式虽然花样多但均短视。作者认为这是马克龙主义没有指南针的表现。如果相信阿塔尔的演讲和他的执政艺术，那么他的逻辑应该是努力与右派共同执政，以获得绝对多数。但是，如果没有事先达成的政治协议，没有足够自信的道德或个人权威，阿塔尔将一事无成。他甚至无法在欧洲大选中为复兴党推出名单开展有效的竞选活动。他的出现只不过是作为一种回应的尝试，旨在对抗在欧洲议会选举上占据投票意向领先的极右翼国民联盟的带头人巴尔德拉（Jordan Bardella<em> ) </em>的效应。</p><p>这篇充满批评语气的文章最后写道：没有多数，没有权威，没有明确的政治定位，没有改革计划来安排未来几个月的工作，阿塔尔除了努力避免错过奥运会的组织工作，以及带着矛盾的双重目标：既不吓唬评级机构，以免我们的债务利率飙升，又不冒社会危机的风险，很难看出他还有什么作用。在欧洲大选可能失败后，这样一个政治团队如何能够团结一致？</p><p><strong>欧洲议会选举的挑战</strong></p><p>对于加布里埃尔-阿塔尔的政治未来，右派的《费加罗报》似乎也不看好，指出，他最坏的打算是什么？在马蒂尼翁的日子不会长久，而议会提出谴责动议的可能性正日益激化右翼队伍，并可能拉拢左翼和新军。总理深知这一点：从 7 月 9 日起，即欧洲大选一个月后，也就是他上任六个月后，国家元首必须按照传统授予他国家功勋大十字勋章。那么，至少他还有一百天的任期。</p><p>经济类报纸《回声报》同一主题指出，在总理府马提翁执政一百天后，加布里埃尔-阿塔尔着手解决 "权力削弱 "问题。周四的讲话要回应公众对安全的强烈要求。马克龙总统在奥林匹克运动会开幕前一百天，就法国人关心的另一个问题--奥林匹克运动会的安全问题作出了保证。</p><p>该报指出，面对极右翼的国民联盟的攻势，执政党多数派仍未找到扭转趋势的良方。妖魔化不再奏效，谴责国民联盟议员在欧洲议会的记录或审查他们的提案也不再奏效。根据《回声报》（Les Echos）和 古典广播电台（Radio classique）委托进行的 EuroTrack 民意调查，对安全问题讨论的支持率正在上升，在本次议会大选中位列第三，仅次于购买力和物价上涨议题。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E7%B1%B3/" title="艾米">艾米</a></div></div></div></div>
+<div>18/04/2024 - 10:07</div><img src="https://s.rfi.fr/media/display/74d37194-fd5a-11ee-a779-005056a90284/w:1280/p:16x9/18.4%20%E8%94%A1%E7%8E%89%E7%8E%B2%E5%8B%9D%E8%A8%B4%EF%BC%8C%E4%BD%86%E8%A3%81%E6%B1%BA%E6%8C%87%E6%96%B0%E8%81%9E%E6%87%89%E5%B1%AC%E8%BB%8A%E7%89%8C%E6%9F%A5%E5%86%8A%E7%9B%AE%E7%9A%84%E4%B9%8B%E8%A3%81%E6%B1%BA%EF%BC%8C%E8%A2%AB%E9%81%8B%E8%BC%B8%E7%BD%B2%E7%9A%84%E6%96%B0%E5%AE%89%E6%8E%92%E5%BC%84%E8%87%B3%E6%9C%89%E7%AD%89%E6%96%BC%E7%84%A1%E3%80%82%28%E7%B6%B2%E4%B8%8A%E8%B3%87%E6%96%99%E5%9C%96%E7%89%87%29.gif"><p><strong>香港的最高级法院早前裁定，新闻调查应包含在查阅车辆登记资料(俗称「查册」)的选项中，运输部门其後修订政策，把新闻用途列入查册用途，但须经书面申请并详细列出目的及相关资料，再由运输署长审批，但新政策实施三个多月以来，署方从未批出任何一宗申请。香港记者协会(记协)为此提出司法覆核，指署方的拖延手法对言论及新闻自由构成不正当限制，要求颁令裁定新政策违宪，获法庭批准，稍後排期正式聆讯。        </strong></p><div><p>运输署因应最高级的终审法院裁决，於1月8日实施收紧车辆查册的新安排，根据《申请车辆登记细节证明书的指引》，新闻采访不属於可以自动查册的三个目的之一，而是须经运输署长审批的「例外情况」，而作出书面申请时须同时提交详细资料，令署长信纳申请符合「重大公众利益」丶资料不会被滥用等条件，才会获批查册。</p><p>网媒《集志社》本月初报道，截至上月底，运输署接获的16 宗「例外情况」申请，暂没成功个案，其中七宗撤回丶一宗遭拒丶八宗仍在处理中，当中半数被署方要求提交进一步资料。申请绝大部份属新闻用途申请，占 13宗，涉及四家新闻机构。</p><p>记协就此於本月5日入禀高等法院申请司法覆核，指署方的新安排与言论和新闻自由原则不一致，不合理地要求记者就其调查提交巨细无遗的资料，包括申请符合哪些公众利益？为何记者手上资料不足以报道等，认为有关要求是对新闻行业的误解，与人权原则不符。</p><p>记协又指出，自新措施实施三个多月来，署方处理为新闻采访目的而查册的申请，不合理地漫长及缓慢，至今未有任何记者成功查册，显见有关做法等同拒绝申请，与终审法院就相关案件的判决有冲突，要求法庭颁令《指引》不符合《香港人权法案条例》及《基本法》下对新闻及言论自由的保障，属越权或违宪，并要求法庭下令署方须迅速及在合理时间内对新闻用途的查册申请作出决定。</p><p>高等法院法官高浩文昨(17日)天颁下书面判决，向记协批出司法覆核许可，并着记协与运输署双方在两周内提供日期，以便排期正审，但日期不会早於7月。</p><p>事缘时任香港电台《铿锵集》编导蔡玉玲因跟进 「7.21 」元朗地铁站袭击事件丶以新闻目的向运输署申请车牌查册，但被指虚报资料，被判罪名成立，她一直上於至终审法院才获判胜诉。终院在裁决中指出，运输署无理由将「真诚的新闻调查」，例如怀疑车主使用其车辆干犯某罪行，排除在车牌查册目的的所有选项以外。署方於1月推出查册新指引。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWka.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%25A6%2599%25E6%25B8%25AF%2F20240418-%25E6%25B8%25AF%25E5%25BA%259C%25E7%2596%2591%25E4%25BB%25A5%25E8%25A1%258C%25E6%2594%25BF%25E6%2589%258B%25E6%25AE%25B5%25E6%25B6%2588%25E5%25BC%25AD%25E6%25B3%2595%25E5%25BA%25AD%25E8%25A3%2581%25E5%2586%25B3-%25E8%25AE%25B0%25E5%258D%258F%25E8%258E%25B7%25E6%2589%25B9%25E5%25B0%25B1%25E8%25BD%25A6%25E7%2589%258C%25E6%259F%25A5%25E5%2586%258C%25E6%2596%25B0%25E5%25AE%2589%25E6%258E%2592%25E8%25BF%259D%25E5%25AE%25AA%25E6%258F%2590%25E8%25A6%2586%25E6%25A0%25B8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8%20-%20https%3A%2F%2Frfi.my%2FAWka.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8%20-%20https%3A%2F%2Frfi.my%2FAWka.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWka.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
