--- a/articles/rfi/999956.md
+++ b/articles/rfi/999956.md
@@ -1,5 +1,5 @@
-<!--1713586502000-->
-[马克龙会晤黎巴嫩总理称：将努力防止黎以之间暴力升级](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0-%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7)
+<!--1713591902000-->
+[国际货币基金组织：欧盟应该加强单一市场，以缩小与美国的差距](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240419-%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87-%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D)
 ------
 
-<div>19/04/2024 - 23:30</div><img src="https://s.rfi.fr/media/display/fc2f3c92-fe93-11ee-8d7c-005056bf30b7/w:1280/p:16x9/2024-04-19T110206Z_1497783755_RC2M97A95C26_RTRMADP_3_FRANCE-LEBANON.JPG"><p><strong>法国总统马克龙周五(4月19日）在巴黎会见黎巴嫩总理米卡提，马克龙表示：“法国将尽一切努力防止黎巴嫩和以色列之间暴力局势升级”。        </strong></p><div><p>法新社报道，法国总统府爱丽舍宫周五在一份新闻稿中称，马克龙周五在巴黎会晤黎巴嫩总理米卡提及黎巴嫩陆军总司令奥恩，马克龙并表示，法国将继续向黎巴嫩武装部队提供支持。</p><p>据爱丽舍宫新闻稿称，马克龙将继续为黎巴嫩的稳定采取行动，使其免受中东紧张局势升级带来的风险”。 马克龙并重申了法国在联合国驻黎巴嫩临时部队（联黎部队）中的承诺，并强调了各国应履行的职责。</p><p>根据周三和周四在布鲁塞尔举行的欧洲理事会特别会议做出的决定，法国将与所有准备好更多参与的国家，特别是其欧洲伙伴一起共同努力”。</p><p>马克龙并与黎巴嫩议会议长纳比·贝里通了电话，马克龙再次呼吁“政治领导人致力于寻求摆脱正在削弱黎巴嫩制度危机的出路”。</p><p>自米歇尔·奥恩（Michel Aoun）总统于 2022 年 10 月 31 日任期结束后，黎巴嫩议会一直难以就其继任者达成一致，势力强大、获伊朗支持的"真主党"（Hezbollah）与对手之间的分歧导致议会陷入分裂。</p><p>马克龙预计很快将与其他黎巴嫩政治人物展开会谈，马克龙已要求他的个人特使、前外交部长勒德里昂继续为此进行努力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5H.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E4%25BC%259A%25E6%2599%25A4%25E9%25BB%258E%25E5%25B7%25B4%25E5%25AB%25A9%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0-%25E5%25B0%2586%25E5%258A%25AA%25E5%258A%259B%25E9%2598%25B2%25E6%25AD%25A2%25E9%25BB%258E%25E4%25BB%25A5%25E4%25B9%258B%25E9%2597%25B4%25E6%259A%25B4%25E5%258A%259B%25E5%258D%2587%25E7%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0%EF%BC%9A%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAX5H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0%EF%BC%9A%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAX5H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5H.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0%EF%BC%9A%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 00:39</div><img src="https://s.rfi.fr/media/display/d6d2e1f0-fc05-11ee-945e-005056a90284/w:1280/p:16x9/2024-04-11T132347Z_1418145052_RC2C47AAXWUG_RTRMADP_3_ETHIOPIA-IMF.JPG"><p><strong>根据国际货币基金组织，欧盟必须进一步推进经济一体化，以提高生产率并缩小与美国的差距。        </strong></p><div><p>法新社从华盛顿报道，国际货币基金组织欧洲地区主任阿尔弗雷德·坎纳（Alfred Kanner）周五表示，欧盟必须进一步推进经济一体化，以提高生产率并缩小与美国的差距。</p><p>国际货币基金组织(IMF)欧洲地区主任阿尔弗雷德·坎纳在接受法新社采访时甚至表示说，如果欧盟能够将其单一市场内仍然存在的壁垒减少10个百分点的话，那么其GDP将会提高7%。</p><p>在举行了整整一周的国际货币基金组织和世界银行春季会议的最后一天，坎纳对法新社说，“与欧盟相比，美国的巨大优势在于它是一个大规模的单一市场”。</p><p>国际货币基金组织对2024年的经济预测显示，大西洋两岸之间存在差距，该组织预计，2024年，美国的经济增长率为2.7%，欧元区仅为0.8%；而2023年，美国是2.5%，欧元区是0.4%。</p><p>坎纳表示，对于欧洲来说，追赶上部分的落后，并不需要巨大的改变。他坚称，改善边境投资，推进银行业联盟、金融联盟，确保养老金可以从一个成员国转移到另一个成员国，促进劳工的流动，实现成员国之间文凭的认可，在这些问题上，是“不应该有任何争论的”。</p><p>坎纳还表示，欧洲国家必须进行结构性改革，为初始教育和整个职业生涯的教育和培训提供更多的空间。</p><p>他说，“为了加强技能，特别是随着人工智能的到来，我们需要工作方法的灵活性和适应性。”</p><p>不过，欧洲国家在生产率方面面临的主要挑战之一是人口老龄化，这一点在人口正在下降的欧洲大陆东部已经很明显。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5c.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240419-%25E5%259B%25BD%25E9%2599%2585%25E8%25B4%25A7%25E5%25B8%2581%25E5%259F%25BA%25E9%2587%2591%25E7%25BB%2584%25E7%25BB%2587-%25E6%25AC%25A7%25E7%259B%259F%25E5%25BA%2594%25E8%25AF%25A5%25E5%258A%25A0%25E5%25BC%25BA%25E5%258D%2595%25E4%25B8%2580%25E5%25B8%2582%25E5%259C%25BA%25EF%25BC%258C%25E4%25BB%25A5%25E7%25BC%25A9%25E5%25B0%258F%25E4%25B8%258E%25E7%25BE%258E%25E5%259B%25BD%25E7%259A%2584%25E5%25B7%25AE%25E8%25B7%259D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D%20-%20https%3A%2F%2Frfi.my%2FAX5c.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D%20-%20https%3A%2F%2Frfi.my%2FAX5c.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5c.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
