--- a/articles/rfi/999966.md
+++ b/articles/rfi/999966.md
@@ -1,5 +1,5 @@
-<!--1713552302000-->
-[美国众院调查发现华尔街向黑名单内的中国公司输送了数十亿美元](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83)
+<!--1713554102000-->
+[法新社：奇瑞落户西班牙 中国加强在欧洲汽车市场攻势](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240419-%E6%B3%95%E6%96%B0%E7%A4%BE-%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99-%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E7%9A%84%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF)
 ------
 
-<div>19/04/2024 - 14:23</div><img src="https://s.rfi.fr/media/display/ac5979d4-da04-11ee-ba46-005056a90284/w:1280/p:16x9/AP24058715129409.jpg"><p><strong>美国国会一项调查发现，华尔街动用了数十亿美元的美国退休储蓄和其他投资来购买“指数基金”股票，其中50%以上是被华盛顿列入黑名单的中国公司。        </strong></p><div><p>据华尔街日报4月18日报道，由两党组成的美国众议院中共问题特别委员会被受权为美国制定对抗中国的战略，其一项调查重点是全球最大的资产管理公司贝莱德（BlackRock）和股票指数编制公司摩根士丹利资本国际公司（MSCI）。</p><p>该调查是对美国金融机构如何为投资中国公司提供便利的一次广泛审查，美国政府指责这些公司加强了中国的军事力量并侵犯了人权。</p><p>众议院中共问题特别委员会没有立法权，但在报告中敦促美国立法者在中美竞争加剧之际限制此类资本流动。该委员会在周四发布的报告中表示：“可能令许多美国人感到惊讶的是，这种活动并不违法。”</p><p>上述资本国际公司表示，它们没有违反任何法律，并坚称它们几乎没有自由裁量权将中国实体独立排除在指数基金之外。</p><p>华日的这个报道说，多年来，美国的金融家一直是中国在华盛顿的最亲密盟友。但随着中国长达数十年的繁荣逐渐结束，美国投资者正从这个世界第二大经济体撤退。来自华盛顿的政治压力不断加大，即使中国的经济状况有所改善，企业很可能难以扭转颓势。美国一些大型养老基金已经少了在中国的投资，或停止了在中国的新投资。</p><p>美国国会众议院中共问题特别委员会在报告中总结称，通过投资“指数”基金，美国金融机构去年向大约63家被美国盯上的中国公司输送了65亿美元，其中包括“航空航天”和“国防企业集团”“中国航空工业集团”、“基因组学公司华大基金（BGI）和互联网安全公司奇虎360。</p><p>这个委员会的报告称，摩根士丹利资本国际公司（MSCI）通过将这些中国公司纳入指数，为 37 亿美元的投资提供了便利。报告指出，贝莱德通过跟踪这些指数的基金投资了至少19亿美元。</p><p>国会委员会讨论的问题涉及贝莱德（BlackRock）等资产管理公司，这些公司利用摩根士丹利资本国际公司（MSCI）编制的指数为养老金、大学捐赠基金和其他长期投资者建立投资组合。虽然贝莱德等公司只是通过指数基金购买了被列入黑名单的中国公司的股票，MSCI 也没有向它们提供资金，但国会委员会的调查认为，这些公司帮助将美国人的储蓄引入相关的中国公司。</p><p>与这些公司的规模相比，金额相对较小。但这一发现涉及到一场政治辩论的核心，这场辩论在美国总统大选前夕可能会愈演愈烈：包括美国对中国的强硬立场，以及被视为促进了中国经济增长的美国公司。</p><p>华日的这个报道说，唐纳德-特朗普（Donald Trump）正在与拜登总统（President Biden）争夺重返白宫的机会，如果特朗普赢得总统竞选，他将提出大幅限制中国进入美国市场的想法。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzc.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E9%2599%25A2%25E8%25B0%2583%25E6%259F%25A5%25E5%258F%2591%25E7%258E%25B0%25E5%258D%258E%25E5%25B0%2594%25E8%25A1%2597%25E5%2590%2591%25E9%25BB%2591%25E5%2590%258D%25E5%258D%2595%25E5%2586%2585%25E7%259A%2584%25E4%25B8%25AD%25E5%259B%25BD%25E5%2585%25AC%25E5%258F%25B8%25E8%25BE%2593%25E9%2580%2581%25E4%25BA%2586%25E6%2595%25B0%25E5%258D%2581%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83%20-%20https%3A%2F%2Frfi.my%2FAWzc.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83%20-%20https%3A%2F%2Frfi.my%2FAWzc.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzc.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 18:55</div><img src="https://s.rfi.fr/media/display/07351c08-fe65-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-19T092252Z_1078934132_RC2L97AGGKWG_RTRMADP_3_AUTOS-SPAIN-CHERY.JPG"><p><strong>中国汽车制造商奇瑞（Chery）周五 (4月19号) 正式宣布进驻西班牙，计划到 2024 年底将主要生产电动汽车。法新社报道称，这再次表明了中国政府在欧洲市场的雄心壮志。据专家称，在欧洲本土设厂将使中国集团能够规避布鲁塞尔可能对汽车进口征收的关税，并更有效地融入欧洲大陆市场。        </strong></p><div><p>报道称，奇瑞汽车以生产低成本汽车著称，是继今年 2 月宣布在匈牙利建设首个欧洲工厂的汽车业巨头比亚迪之后，第二个宣布在欧洲建立工厂的中国品牌。不过，比亚迪工厂还要三年才能投产。</p><p>奇瑞工厂于本周二已经宣布，原则上将成为与西班牙EBRO-EV 汽车公司的合资企业的一部分，该公司是一家专门生产电动皮卡的集团，其前身是一个于 1987 年消失的卡车和面包车品牌。</p><p> 该合资企业由 Ebro-EV Motors 持有多数股权，将设在 2021 年关闭的巴塞罗那前日产工厂。双方在周五的新闻发布会上表示，合资公司将创造 "1250 个就业岗位"，其中 "150 个将在未来几个月内创造"。</p><p>日产在巴塞罗那的工厂有 3000 名员工，2021 年部分出售给摩托车制造商 Silence 和 Ebro-EV Motors。但马德里与西班牙集团一起，正在寻找一个工业合作伙伴来重新启动该工厂。</p><p><strong>规避关税 占据市场</strong></p><p>法新社称，奇瑞的决定证实了西班牙在汽车行业的领先地位。根据欧洲汽车制造商协会的数据，去年西班牙组装了 187万辆汽车，是欧洲第二大汽车生产国，仅次于德国（396万辆）。</p><p>这次中国与西班牙汽车领域的合作正值北京和布鲁塞尔之间商业关系紧张的背景下，今年 9 月，布鲁塞尔对中国政府向电动汽车行业提供的公共补贴展开了调查，并指责这些补贴扭曲了竞争。</p><p>欧盟委员会表示，这些补贴被用来显示 "人为的低价"，欧盟委员会可能会对中国汽车征收惩罚性关税，从而有可能引发与中国政府的贸易战。</p><p>据专家称，在欧洲本土设厂将使中国集团能够规避布鲁塞尔可能对汽车进口征收的关税，并更有效地融入欧洲大陆市场。</p><p> 近年来，中国电动汽车市场异常活跃，涌现出了比亚迪，极氪、深蓝和长城等数十个本土品牌，它们正在与特斯拉和其他外国制造商展开竞争。</p><p>   其中一些品牌正试图加强其在欧洲的影响力，有些已经在欧洲设立了销售网点和研发中心。它们正在抱怨所面临的障碍，声称这些障碍是在欧洲现有汽车制造商的授意下设置的。</p><p><strong>"再工业化进程的象征"</strong></p><p> 根据周五在西班牙首相佩德罗-桑切斯和奇瑞副董事长张贵兵见证下正式签署的协议条款，中国集团将在未来几个月内利用现有基础设施，开始组装基于其欧姆达 5 车型的内燃和电动汽车。</p><p>从 2024 年第四季度起，还将生产以 Ebro 品牌销售的电动 SUV。奇瑞和EBRO在新闻稿中表示，他们将在2027年实现 "5万辆 "的总产量，并在2029年实现 "15万辆 "的总产量。</p><p>奇瑞汽车股份有限公司副总经理兼国际公司总经理张贵兵当天表示，“我们将为当地人创造数千个就业岗位，并逐步构建整车及其零部件产业园。在具备一定规模之后，进一步出口到欧盟和其他国家。我们希望这个Ebro能够成为奇瑞埃布罗合作后主要生产和出口基地。”</p><p> 佩德罗-桑切斯在讲话中对这一 "将创造财富 "和 "就业机会 "的项目表示满意，认为奇瑞和埃布罗的宣布是 "整个西班牙 "正在进行的 "再工业化进程的象征"。</p><p> 奇瑞成立于1997年，是一家国有企业。该品牌声称到 2023 年将售出188万辆汽车，15年前在中国非常受欢迎，尤其是针对当地市场推出的小型汽油城市汽车。</p><p>奇瑞还不是中国最受欢迎的电动汽车制造商之一，但它已开始向这一细分市场和高端电动汽车领域进军。它是世界领先的中国汽车出口企业（到2023年出口了937,000辆）。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3V.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240419-%25E6%25B3%2595%25E6%2596%25B0%25E7%25A4%25BE-%25E5%25A5%2587%25E7%2591%259E%25E8%2590%25BD%25E6%2588%25B7%25E8%25A5%25BF%25E7%258F%25AD%25E7%2589%2599-%25E4%25B8%25AD%25E5%259B%25BD%25E5%258A%25A0%25E5%25BC%25BA%25E5%259C%25A8%25E6%25AC%25A7%25E6%25B4%25B2%25E7%259A%2584%25E6%25B1%25BD%25E8%25BD%25A6%25E5%25B8%2582%25E5%259C%25BA%25E6%2594%25BB%25E5%258A%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF%20-%20https%3A%2F%2Frfi.my%2FAX3V.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF%20-%20https%3A%2F%2Frfi.my%2FAX3V.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3V.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
