--- a/articles/rfi/999967.md
+++ b/articles/rfi/999967.md
@@ -1,5 +1,5 @@
-<!--1713552302000-->
-[伊朗境内爆炸原因疑点重重，国际社会同声呼吁克制 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240419-%E4%BC%8A%E6%9C%97%E5%A2%83%E5%86%85%E7%88%86%E7%82%B8%E5%8E%9F%E5%9B%A0%E7%96%91%E7%82%B9%E9%87%8D%E9%87%8D%EF%BC%8C%E5%9B%BD%E9%99%85%E7%A4%BE%E4%BC%9A%E5%90%8C%E5%A3%B0%E5%91%BC%E5%90%81%E5%85%8B%E5%88%B6)
+<!--1713554102000-->
+[【视频】巴黎新桥：塞纳河上最古老的桥梁](https://www.rfi.fr/cn/%E9%AD%85%E5%8A%9B%E6%B3%95%E5%85%B0%E8%A5%BF/20240419-%E8%A7%86%E9%A2%91-%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5-%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81)
 ------
 
-<div>19/04/2024 - 15:30</div><img src="https://s.rfi.fr/media/display/c0fc8d5c-fe37-11ee-b2ed-005056a97e36/w:1280/p:16x9/Carte-Iran-RFI.png"><p><strong>伊朗中部伊斯法罕一座军事基地附近19日凌晨响起巨大的爆炸声响，连日来全球对中东地区冲突随伊朗大举袭击以色列的报复性行动而扩大的担心进一步提升，各地股市也在消息传出的第一时间纷纷下挫。但在众多呼吁有关各方克制、避免升级的表态中，这起爆炸事件起因为何？是否的确是以色列袭击行动所为，截至本文截稿时止，仍然不甚明朗。                    </strong></p><div><p><strong>伊朗否认有来自境外的袭击</strong></p><p>根据伊朗各方通讯社目前通报的消息，该国中部地区一个军事基地附近19日拂晓时发生三起爆炸，<strong>伊斯法罕</strong>地区都听到了强烈的爆炸声响，但爆炸原因尚不明了。该通讯社消息还指出，伊朗高度敏感的防空系统在多地应声启动，并击落一些无人机。而从他们掌握的消息来看，没有“来自境外的攻击行动”，伊朗核设施也“没有受到任何重大损坏”。国际能源署当日也证实，尚没有伊朗境内核设施遇袭受损的消息。美国《纽约时报》引述一些伊朗负责人报道指出，发生小型无人机袭击行动，这些无人机可能是自伊朗本土出发，伊朗防空系统没有监测到进入伊朗空域的不明飞行物。</p><p>另据法新社发自德黑兰的消息，19日当天，伊朗总统易卜拉欣-莱希在爆炸发生数小时后，在东北部城市<strong>达姆甘</strong>向数百人发表讲话时，虽然简短提到中东地区的紧张情势，但完全没有提及当天的爆炸事件。</p><p><strong>《华盛顿邮报》称以色列事前知会华盛顿</strong></p><p>但与此同时，也有一些美国媒体则各自引述消息，称以色列19日对伊朗实施了报复性打击。美国NBC和CNN两家电视台都引述消息人士以及一名美国负责人报道指出，以色列在行动前曾通报华盛顿，美方对此既没有反对，也没有参与。《华盛顿邮报》引述一名不愿披露身分的以色列负责人报道称，以色列的攻击行动是对4月13日伊朗对以色列发动大规模空袭做出的反击。以色列内塔尼亚胡政府中的极右翼的安全部长伊塔马尔·本-格维尔（Itamar Ben-Gvir）当日在社交媒体X，也就是前推特平台上发帖，似乎默认了伊朗境内的爆炸是以色列所为。但他此番推特发言立即在以色列国内引来众多批评，认为他让以色列蒙羞，也让以色列难以出面否认等等。</p><p>法新社为此联系以色列官方求证，但以色列军方和政府都拒绝对爆炸事件发言。美国白宫也拒绝对此发表评论。这一切都令连日来持续对中东战火扩大深感忧心的国际舆论在不安中，不得不谨慎面对。</p><p><strong>你来我往的报复性打击导致危机不断升级？</strong></p><p>国际社会之所以如此敏感是因为4月13日，伊朗有史以来首次自本土向以色列发动空袭，数百架无人机和导弹飞向以色列，声称是要对伊朗驻叙利亚大马士革使馆4月1日遭遇袭击，并造成包括伊朗革命卫队高阶将领在内的13人丧生事件的报复性打击。伊朗认定大马士革使馆遭遇的袭击是以色列所为，但以色列既未公开承认，也没有否认。但自以色列军队去年十月起对巴勒斯坦激进伊斯兰武装哈马斯10月7日突袭以色列，发起大规模反攻行动以来，伊朗一直被认为在幕后支持包括黎巴嫩真主党在内的中东地区激进伊斯兰武装，侧翼袭击以色列，支持哈马斯，以色列对伊朗目标实施打击的可能性因此不能排除。</p><p>但伊朗4月13日对以色列的空袭行动虽然并未在以色列境内造成重大伤亡或物质破坏，以色列在美欧盟友的协助下，成功拦截了绝大部分袭击飞行物。但以色列内塔尼亚胡政府誓言要对伊朗的报复性反击也做出报复性反击。巴以冲突常年冤冤相报的恶性循环明显出现战火扩大的危险。在俄乌战争已经持续两年有余、加沙走廊的以哈战争持续半年之后始终难以达成一项新的人道停火协议、朝鲜当局常规导弹以及核武器技术不断提升、台海两岸持续紧张、中国与菲律宾在南海也一再紧张对峙的背景下，石油蕴藏丰富的中东地区战事扩大不仅对已经复杂的国际局势增添新的风险，也对新冠疫情后艰难起步又因乌克兰战争而受到干扰的世界经济增添新的不确定因素。</p><p><strong>国际社会同声呼吁克制</strong></p><p>19日伊朗境内的爆炸事件真正原因为何尚不明了，国际社会纷纷发出避免升级的呼吁。正在意大利举行外长会议的七国集团当日呼吁有关各方努力阻止中东战事升级，并明确反对以色列在巴勒斯坦拉法地区发动大规模军事行动。欧盟委员会主席冯德莱恩表示，绝对有必要让中东地区稳定，让各方避免采取任何新的行动。联合国人权事务高级专员署发言人敦促各方采取措施，为当地局势降温，保证当地已经极度困难的形势不再继续恶化。中国外交部发言人林剑一方面表示，中方“反对任何导致局势进一步紧张升级的行为”，另一方面表示，中方会“为缓和地区紧张局势发挥建设性作用”。俄罗斯外长拉夫罗夫则通过俄罗斯媒体向以色列传话，称伊朗不希望两国冲突升级。</p><p>所有这些呼吁是否能降低中东地区紧张情势出现扩大，实在难以预料。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E7%91%9E%E8%BF%AA/" title="瑞迪">瑞迪</a></div></div></div></div>
+<div>19/04/2024 - 18:18</div><img src="https://s.rfi.fr/media/display/17ae80ac-15d4-11ea-9423-005056bf7c53/w:1280/p:16x9/Embarras%20Pont%20Neuf_0.jpg"><p><strong>新桥是目前巴黎现存最古老的桥梁。 它也是第一座跨越整个塞纳河河面的桥梁。        </strong></p><div><p>在新桥建成之前，巴黎的桥梁主要是用木头建造的，因此极易失火。</p><p>新桥保留了建桥时巴黎人自发给它起的名字。 修建这座桥的决定是在1577 年做出的，当时的国王亨利三世任命了一个委员会，来确保桥梁的修建得当并对工程施工进行监督。</p><p>直到 18 世纪，新桥一直是巴黎这座城市的中心，也是许多街头艺人和商贩的最爱。桥上总是热闹非凡。</p><p>新桥两边的桥栏上有 384 个怪面装饰，是古代神话故事中森林或乡间神灵的头像，每个头像重达100多公斤。</p><p>随着时间的推移，原来的怪面装饰的某些部分已经损坏，雕像的细节因风化而模糊，因此它们需要全部更换进行修复。</p><p>历时13年的新桥修复工程在2007年揭幕，恰逢新桥建成 400 周年，以示纪念。</p><p>所以，今天看到的桥上雕像都是复制品。 不过，如有兴趣，可前往巴黎市立历史博物馆——卡纳瓦雷博物馆，在那里欣赏到这些雕像的原件。</p><p>新桥的设计和支撑桥身的拱门让人联想到罗马建筑。 桥上人行道的设计灵感也来自罗马道路。</p><p>新桥也是巴黎最早铺设人行道的桥梁之一，当时铺设人行道是为了保护行人避雨和马车溅起的泥浆之用。</p><p>这座桥自1889年起就被列为历史古迹。1991年，它和巴黎塞纳河两岸河沿一起被联合国教科文组织列入世界文化遗产名录。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX35.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%25AD%2585%25E5%258A%259B%25E6%25B3%2595%25E5%2585%25B0%25E8%25A5%25BF%2F20240419-%25E8%25A7%2586%25E9%25A2%2591-%25E5%25B7%25B4%25E9%25BB%258E%25E6%2596%25B0%25E6%25A1%25A5-%25E5%25A1%259E%25E7%25BA%25B3%25E6%25B2%25B3%25E4%25B8%258A%25E6%259C%2580%25E5%258F%25A4%25E8%2580%2581%25E7%259A%2584%25E6%25A1%25A5%25E6%25A2%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81%20-%20https%3A%2F%2Frfi.my%2FAX35.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81%20-%20https%3A%2F%2Frfi.my%2FAX35.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX35.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
