--- a/articles/rfi/999977.md
+++ b/articles/rfi/999977.md
@@ -1,5 +1,5 @@
-<!--1713541502000-->
-[印度大选启动投票，莫迪能否蝉联第三任期6月初见分晓](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240419-%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93)
+<!--1713543301000-->
+[布林肯: 中国不能一边希望与欧洲友好 一边助长对欧洲安全的最大威胁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E5%B8%83%E6%9E%97%E8%82%AF-%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD-%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81)
 ------
 
-<div>19/04/2024 - 14:11</div><img src="https://s.rfi.fr/media/display/0606e2ba-fe30-11ee-9710-005056bfb2b6/w:1280/p:16x9/2024-04-19T075100Z_1586901846_RC2F97A5NAJV_RTRMADP_3_INDIA-ELECTION.JPG"><p><strong>印度大选19日起陆续在全国各地展开，一直持续到6月1日。9亿多选民将选出543名国会下院议员。从目前情况看，已经连续两届总理任期的莫迪身后的人民党有望再次在国会获得多数席位，让莫迪蝉联第三任期。        </strong></p><div><p>印度全国大选被看作是全球规模最大的投票活动。全国有9亿6千800万选民，超过美国、欧洲联盟以及俄罗斯合计总人口。投票活动全程历时一个多月，分七个阶段进行。检票活动在6月4日才全面展开。通常情况下，结果当天即可揭晓。</p><p>恒河沿岸重要朝圣城市赫里德瓦尔（Haridwar）是首批启动投票的地区之一。总理莫迪当天向选民，尤其是年青选民发出呼吁，希望他们踊跃投票。</p><p>最大反对党、曾常年把持政权的国大党也同天呼吁选民投票，以便“告别通货膨胀，告别失业，告别仇恨，告别不公”。</p><p>从目前情况来看，已经73岁的现任总理莫迪有望再次获胜，蝉联第三个任期。美国独立民调机构皮尤研究中心2023年的一项调查显示，担任总理已经近十年的莫迪仍然享有近80%的民意支持。</p><p>十年间，印度在莫迪领导下在国际舞台影响力提升，并跃居世界第五大经济体。在中美两大国全面战略竞争的背景下，印度成为西方国家无论是战略部署，还是企业投资，竞相争取的对象。</p><p>但莫迪任下的印度也越来越远离西方国家的民主标准。莫迪大力助长了印度教民族主义势力，引发国内不同宗教信仰族群间的紧张关系。在这次投票活动启动前不久，莫迪还亲自出席了一座供奉印度教神灵的寺庙的落成典礼。而这所寺庙修建在被印度教狂热分子摧毁的一座有数千年历史的清真寺地址上。</p><p>莫迪政府也加强了对反对声音的打压。许多反对派人士或者遭遇犯罪调查，或者被关入监狱。今年2月，国大党的银行账户被金融监管部门冻结。反对派各政党试图联合抗衡的努力看来效果不彰，到目前为止尚没有推出可能出任总理的人选。</p><p>国际非政府团体“无疆界记者”组织的报告认为，莫迪2014年上台以来，印度在新闻自由度年度排行中倒退了21位，在180个国家和地区中排行第161。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzM.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240419-%25E5%258D%25B0%25E5%25BA%25A6%25E5%25A4%25A7%25E9%2580%2589%25E5%2590%25AF%25E5%258A%25A8%25E6%258A%2595%25E7%25A5%25A8%25EF%25BC%258C%25E8%258E%25AB%25E8%25BF%25AA%25E8%2583%25BD%25E5%2590%25A6%25E8%259D%2589%25E8%2581%2594%25E7%25AC%25AC%25E4%25B8%2589%25E4%25BB%25BB%25E6%259C%259F6%25E6%259C%2588%25E5%2588%259D%25E8%25A7%2581%25E5%2588%2586%25E6%2599%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzM.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 17:33</div><img src="https://s.rfi.fr/media/display/660bc7fe-fe56-11ee-9a83-005056bf30b7/w:1280/p:16x9/AP24110423238580%20%281%29.jpg"><p><strong>七国集团（G7）在意大利卡普里岛举行外长会议，根据周五的会议最后公报，G7对中国向俄罗斯转让材料助其在乌克兰的战争机器表示"强烈关切"。        </strong></p><div><p>在周五的新闻发布会上，美国国务卿安东尼-布林肯指责中国间接"助长"了在乌克兰的冲突。布林肯说：“中国如果一方面希望与欧洲和其他国家保持友好关系，就不能另一方面助长冷战结束以来对欧洲安全的最大威胁”。</p><p>据美国外交人士称，布林肯是在一次专门讨论支持乌克兰抵抗俄罗斯入侵的工作会议上表达了对中国向俄罗斯提供军民两用产品支持问题的担忧，并表示支持两年多来一直与俄罗斯军队作战的乌克兰。</p><p>法新社4月19日报道，G7外长"在会议结束时发表的公报中说："我们对中国公司向俄罗斯转让军民两用材料和武器部件深表关切，俄罗斯正利用这些材料和部件提高其军事生产。</p><p>G7外长指出，中国的转让使俄罗斯得以重建和振兴其国防工业，对乌克兰和国际和平与安全构成威胁"，他们对此表示遗憾。</p><p>G7敦促"中国因该确保停止这种支持，因为这将延长冲突，增加俄罗斯对其邻国的威胁"。</p><p>七国集团由美国、日本、加拿大、法国、德国和今年担任轮值主席国的意大利组成。</p><p>该报道说，特别是，美国人希望欧洲国家能向中国政府施压，迫使其减少对俄罗斯的军事支持，因为华盛顿自己也承认，俄罗斯军队正在乌克兰领土上占据优势。</p><p>美国说，几个月来，它一直在目睹中国向俄罗斯转让装备，莫斯科正利用这些装备重建其国防工业，这在乌克兰战场上得到了反映。</p><p>华盛顿给中国划定了一条红线，即不得直接提供武器给俄罗斯用于乌克兰战争--迄今为止还没有看到相反的证据。</p><p>但在中俄关系加深的背景下，美国越来越多地谴责北京通过“迂回渠道”支持俄罗斯，并将中国这些支持与俄罗斯在乌克兰的战争建立直接的关联。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX2N.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E5%25B8%2583%25E6%259E%2597%25E8%2582%25AF-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25B8%258D%25E8%2583%25BD%25E4%25B8%2580%25E8%25BE%25B9%25E5%25B8%258C%25E6%259C%259B%25E4%25B8%258E%25E6%25AC%25A7%25E6%25B4%25B2%25E5%258F%258B%25E5%25A5%25BD-%25E4%25B8%2580%25E8%25BE%25B9%25E5%258A%25A9%25E9%2595%25BF%25E5%25AF%25B9%25E6%25AC%25A7%25E6%25B4%25B2%25E5%25AE%2589%25E5%2585%25A8%25E7%259A%2584%25E6%259C%2580%25E5%25A4%25A7%25E5%25A8%2581%25E8%2583%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAX2N.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAX2N.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX2N.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
