--- a/articles/rfi/999978.md
+++ b/articles/rfi/999978.md
@@ -1,5 +1,5 @@
-<!--1713541502000-->
-[香港「七连跌」被挤出全球十大货柜港  机场贷运连续13年居首](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E9%A6%99%E6%B8%AF-%E4%B8%83%E8%BF%9E%E8%B7%8C-%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF-%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96)
+<!--1713543301000-->
+[伊朗中部传爆炸声  是以色列报复？看美联社如何分析](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240419-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0-%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D-%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90)
 ------
 
-<div>19/04/2024 - 10:39</div><img src="https://s.rfi.fr/media/display/04d7f756-fe28-11ee-9cd8-005056a97e36/w:1280/p:16x9/hk-203.jpg"><p><strong>曾雄踞全球货柜港排名榜首的香港货柜码头，在吞吐量连续七年下跌之后，于去年以1440万个标准箱(TEU)正式跌出「十大」，被中东的杜拜取代。至于同属中国政府期望香港发展的「八大中心」之一的航运枢纽则传来令官员松一口气的消息，香港机场去年再度荣膺全球最繁忙货运机场，年内处理货运量达 430万公吨，是该机场连续第十叁年获选为全球最繁忙货运机场。        </strong></p><div><p>法国航运顾问公司Alphaliner指出，香港在2023年的货柜处理量有1440.1个标准箱，以7.2万个标准箱之差，让杜拜抢去全球最繁忙货柜港第十名的位置，屈居第11位，是首次跌出全球十大之列。</p><p>据Alphaliner发布的数据，全球最繁忙的叁十个货柜港口中，中国的上海以4915.8万个标准箱居首位，紧随其后的是新加坡(3901.3万个TEU)和宁波-舟山港(3530万个TEU)，接着是青岛丶深圳丶广州丶韩国釜山丶天津丶美国的洛杉矶-长滩港，以及杜拜的杰贝阿里港(Jebel Ali)。意味在「十大」中，中国港口占了六个；若以吞吐量计算，中国港口的吞吐量更占全球叁十个最繁忙货柜港的51%。</p><p>曾经连续十一年蝉联全球港口货柜吞吐量排行榜第一的香港，在中国港口兴旺的情况下，货柜吞吐量拾级而下，去年更按年大减13.7%而跌出全球十大，排第11位；与疫情前的2019年相比，跌幅达 21.3%，是连续第七年下跌，反映香港港口吞吐量正处于长期萎缩期，部分原因是货运被邻近的深圳和广州抢走，例如毗邻的深圳，去年的吞吐量便是香港的一倍有馀。</p><p>不过，运输及物流局昨(18日)晚于社交媒体发文，指根据国际航运业权威媒体Lloyd's List的方法，「估计」香港港口的货柜吞吐量去年仍然排名全球第十，较2022年下跌一名。局方指出，与Lloyd's不同，Alphaliner把洛杉矶港及长滩港合并计算，后者的排名，2022年时高香港一位。该局续称，大家着眼于香港货柜吞吐量有下跌趋势之馀，更应继续巩固及发展香港港口的优势。</p><p><strong>今年首季货运量续跌2.3% 处转型十字路口</strong></p><p>但以今年首季数字看来，香港货柜吞吐量的跌势未止。根据港府统计处和海运港口局秘书处的估计，香港今年头叁个月共处理了335.2万个标准箱，较去年同期收缩2.3%。加上主要航运联盟把香港剔除于2025年亚洲至美国西岸的远程航线，香港的吞吐量势将受影响。</p><p>本台日前报道已引述香港定期班轮协会主席罗振麟（Roberto Giannetta）指出，香港贷柜吞吐量虽在下滑，但在亚洲区内(Intra-Asia)市场这个全球最大航运市场的份额却在不断上升，香港可转作驳运中心。该会在报道刊登后发来数据作补充，指香港去年处理的1440万个标准箱中，亚洲区内的货运量占了六成，足证香港可为南中国提供最大亚洲区内市场网络。</p><p>相反，香港的空运业务仍然手执全球牛耳。根据国际机场协会15日公布的最新数据，按总货运量计算，香港国际机场再度获选为2023年全球最繁忙货运机场，年内机场处理的货运量达430万公吨，这是香港国际机场自2010年以来第十叁次获选为全球最繁忙货运机场。运物局局长林世雄指出，随着机场的第叁条跑道系统今年内投入运作，预计到2035年时，香港机场每年可处理1000万公吨货物，国际航空枢纽的地位将得以巩固。</p><p>中国在「十四五」规划中要求香港维持「八大中心」地位，分别是原来的国际金融中心丶国际航运中心丶国际商贸中心和亚太地区国际法律及解决争议服务中心，以及新增的国际航空枢纽中心丶国际创新科技中心丶区域知识产权贸易中心和中外文化艺术交流中心。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWwg.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E9%25A6%2599%25E6%25B8%25AF-%25E4%25B8%2583%25E8%25BF%259E%25E8%25B7%258C-%25E8%25A2%25AB%25E6%258C%25A4%25E5%2587%25BA%25E5%2585%25A8%25E7%2590%2583%25E5%258D%2581%25E5%25A4%25A7%25E8%25B4%25A7%25E6%259F%259C%25E6%25B8%25AF-%25E6%259C%25BA%25E5%259C%25BA%25E8%25B4%25B7%25E8%25BF%2590%25E8%25BF%259E%25E7%25BB%25AD13%25E5%25B9%25B4%25E5%25B1%2585%25E9%25A6%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96%20-%20https%3A%2F%2Frfi.my%2FAWwg.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96%20-%20https%3A%2F%2Frfi.my%2FAWwg.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWwg.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 15:21</div><img src="https://s.rfi.fr/media/display/d33d9a5e-1266-11ea-b20a-005056a99247/w:1280/p:16x9/2018-07-16t122734z_63342907_rc14637277c0_rtrmadp_3_iran-haj-khamenei.jpg"><p><strong>周五（4月19号）清晨，伊朗在发现无人机后向伊斯法罕附近的一个主要空军基地和一个核设施发射了防空系统，这些无人机被怀疑是以色列袭击的一部分，以报复德黑兰对该国前所未有的无人机和导弹袭击。但没有伊朗官员直接承认以色列发动袭击的可能性，以色列军方也没有回应置评请求。据报周五是伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日。        </strong></p><div><p>美联社海湾和伊朗新闻主任乔恩-甘布雷尔（Jon Gambrell）报道称："伊朗在该国中部地区发射了防空系统，这似乎是以色列对几天前德黑兰发动的袭击的某种回应。现在，我们所知道的还很零散。截至今天上午，伊朗已经停止了航班飞行，防空系统也已经启动，人们听到了伊斯法罕附近的爆炸声。伊斯法罕附近有一个大型空军基地，伊朗在那里拥有1979年伊斯兰革命前购买的F-14 "雄猫 "战斗机。这里还有一个重要的核设施。伊朗并没有说这是一次袭击。他们对此轻描淡写。他们今天在国家电视台上试图拿这件事开玩笑。但在此之前，德黑兰发动了一次袭击，向以色列发射了数百架无人机和导弹，而在此之前，以色列在叙利亚发动了另一次袭击，杀害了伊朗准军事革命卫队的成员。"</p><p>对于伊朗的低调，乔恩-甘布雷尔引述分析人士称，这可能是伊朗试图避嫌，避免局势升级的一次尝试。伊朗对以色列的袭击是史无前例的，而今天的袭击似乎没有造成任何严重破坏。但这确实表明以色列有能力向伊朗发射无人机，而且今天还是伊朗最高领袖阿亚图拉-阿里-哈梅内伊的85岁生日。因此，分析人士称，这可能是对伊朗的一个警告，即以色列仍有能力在未来发动袭击。</p><p>« 纽约时报》援引匿名以色列官员的话称，这次袭击发生在伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日之际。</p><p>上周六晚间，伊朗发射了数百架无人机、弹道导弹和巡航导弹，发动了前所未有的袭击，使中东更接近一场地区性战争。以色列军方发言人表示，发射次数超过 300 次，但其中 99% 被拦截。</p><p>美联社今天报道称，伊朗总统当天访问伊朗城市达姆甘时称，最近针对以色列的导弹和无人机袭击是伊朗“自豪和力量的源泉”。莱西说：“这次行动成为伊斯兰共和国及其武装部队力量的标志。它也显示了我们国家钢铁般的决心。”</p><p>莱西声称这次袭击是必要的，并团结了该国的政治派别。</p><p>法新社包袋，有媒体援引美国高级官员的话称，以色列周五的袭击是为了报复上周末针对以色列的史无前例的无人机和导弹袭击。然而，伊朗塔斯尼姆通讯社援引 "消息灵通人士 "的话说，"没有关于外国袭击的消息"。</p><p>一些国家和国际组织仍然谨慎地作出反应，呼吁保持克制。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0l.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240419-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E4%25BC%25A0%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0-%25E6%2598%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E6%258A%25A5%25E5%25A4%258D-%25E7%259C%258B%25E7%25BE%258E%25E8%2581%2594%25E7%25A4%25BE%25E5%25A6%2582%25E4%25BD%2595%25E5%2588%2586%25E6%259E%2590&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0l.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
