--- a/articles/rfi/999981.md
+++ b/articles/rfi/999981.md
@@ -1,5 +1,5 @@
-<!--1713532505000-->
-[尼日利亚成为世界上第一个抗脑膜炎新疫苗Men5CV疫苗的国家 - 健康时间](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E5%81%A5%E5%BA%B7%E6%97%B6%E9%97%B4/20240418-%E5%B0%BC%E6%97%A5%E5%88%A9%E4%BA%9A%E6%88%90%E4%B8%BA%E4%B8%96%E7%95%8C%E4%B8%8A%E7%AC%AC%E4%B8%80%E4%B8%AA%E6%8A%97%E8%84%91%E8%86%9C%E7%82%8E%E6%96%B0%E7%96%AB%E8%8B%97men5cv%E7%96%AB%E8%8B%97%E7%9A%84%E5%9B%BD%E5%AE%B6)
+<!--1713541502000-->
+[印度大选启动投票，莫迪能否蝉联第三任期6月初见分晓](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240419-%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93)
 ------
 
-<div>18/04/2024 - 23:26</div><img src="https://s.rfi.fr/media/display/63f9ea44-7000-11ed-a917-005056bfb2b6/w:1280/p:16x9/pexels-chokniti-khongchum-2280568-1.jpg"><p><strong>尼日利亚成为世界上第一个推出世界卫生组织推荐的新疫苗Men5CV疫苗的国家，可以防止人们感染五种脑膜炎球菌菌株。根据世界卫生组织消息，全球疫苗免疫联盟为这次疫苗和紧急疫苗接种活动以及全球脑膜炎疫苗储备提供了资金，并通过开展常规脑膜炎疫苗接种活动为低收入国家提供支持。                    </strong></p><div><p>尼日利亚位于非洲脑膜炎带，是非洲26个脑膜炎高度流行国家之一。去年，非洲各地报告的脑膜炎病例增加了50%。</p><p>世界卫生组织表示，尼日利亚在2023年10月1日至2024年3月11日期间暴发了血清型C脑膜炎奈瑟菌疫情，导致1742例疑似脑膜炎病例，包括在尼日利亚36个州中的7个州（阿达马瓦、包奇、贡贝、吉加瓦、卡齐纳、约贝、赞法拉州）出现101例确诊病例和153例死亡。</p><p>为了平息这场致命的疫情，尼日利亚在2024年3月25日至28日期间开展了一次免疫接种运动，最初为100多万1-29岁人群接种疫苗。</p><p>这种革命性的新疫苗在一次注射中提供对抗五种主要脑膜炎球菌菌株（A、C、W、Y和X）的强大屏障。这五种菌株都会引起脑膜炎和血液中毒。这比目前在非洲大部分地区使用的疫苗提供了更广泛的保护，目前使用的疫苗仅对A菌株有效。</p><p>这种新疫苗有可能大幅减少脑膜炎病例，并推动在战胜脑膜炎方面取得进展。这对于像尼日利亚这样流行多种血清型脑膜炎的国家尤其重要。这种新疫苗采用了与在尼日利亚消灭了A型脑膜炎球菌疫情的A型脑膜炎结合疫苗（MenAfriVac®）相同的技术。</p><p>这种新的多价结合疫苗的研发历时13年，是在帕斯适宜卫生科技组织与印度血清研究所开展合作的基础上研制出来的。英国政府外交、联邦和发展事务部提供的资金对其研发成功至关重要。</p><p>2023年7月，世卫组织对新的Men5CV疫苗（品牌名称为MenFive®）进行了预认证，并于2023年10月向各国发布了推出这种新疫苗的正式建议。2023年12月，全球疫苗免疫联盟为推出Men5CV疫苗分配了资源，目前可通过国际疫苗供应协调小组管理的应急储备为疫情应对提供疫苗，而通过大规模预防运动推出的疫苗接种活动预计将在2025年在脑膜炎地带国家开始。</p><p>世界卫生组织说，继尼日利亚发起脑膜炎疫苗接种运动之后，2024年4月在巴黎举行的脑膜炎问题国际峰会是在战胜脑膜炎道路上的又一个重要里程碑，各国领导人将在峰会上确定当前面临的挑战，评估下一步应采取的措施。这也为国家领导人和主要合作伙伴在政治和财政上作出承诺以便作为一个公共卫生问题加快实现到2030年消除脑膜炎的目标提供了一个机会。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%AE%89%E4%B8%9C%E5%B0%BC/" title="安东尼">安东尼</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 14:11</div><img src="https://s.rfi.fr/media/display/0606e2ba-fe30-11ee-9710-005056bfb2b6/w:1280/p:16x9/2024-04-19T075100Z_1586901846_RC2F97A5NAJV_RTRMADP_3_INDIA-ELECTION.JPG"><p><strong>印度大选19日起陆续在全国各地展开，一直持续到6月1日。9亿多选民将选出543名国会下院议员。从目前情况看，已经连续两届总理任期的莫迪身后的人民党有望再次在国会获得多数席位，让莫迪蝉联第三任期。        </strong></p><div><p>印度全国大选被看作是全球规模最大的投票活动。全国有9亿6千800万选民，超过美国、欧洲联盟以及俄罗斯合计总人口。投票活动全程历时一个多月，分七个阶段进行。检票活动在6月4日才全面展开。通常情况下，结果当天即可揭晓。</p><p>恒河沿岸重要朝圣城市赫里德瓦尔（Haridwar）是首批启动投票的地区之一。总理莫迪当天向选民，尤其是年青选民发出呼吁，希望他们踊跃投票。</p><p>最大反对党、曾常年把持政权的国大党也同天呼吁选民投票，以便“告别通货膨胀，告别失业，告别仇恨，告别不公”。</p><p>从目前情况来看，已经73岁的现任总理莫迪有望再次获胜，蝉联第三个任期。美国独立民调机构皮尤研究中心2023年的一项调查显示，担任总理已经近十年的莫迪仍然享有近80%的民意支持。</p><p>十年间，印度在莫迪领导下在国际舞台影响力提升，并跃居世界第五大经济体。在中美两大国全面战略竞争的背景下，印度成为西方国家无论是战略部署，还是企业投资，竞相争取的对象。</p><p>但莫迪任下的印度也越来越远离西方国家的民主标准。莫迪大力助长了印度教民族主义势力，引发国内不同宗教信仰族群间的紧张关系。在这次投票活动启动前不久，莫迪还亲自出席了一座供奉印度教神灵的寺庙的落成典礼。而这所寺庙修建在被印度教狂热分子摧毁的一座有数千年历史的清真寺地址上。</p><p>莫迪政府也加强了对反对声音的打压。许多反对派人士或者遭遇犯罪调查，或者被关入监狱。今年2月，国大党的银行账户被金融监管部门冻结。反对派各政党试图联合抗衡的努力看来效果不彰，到目前为止尚没有推出可能出任总理的人选。</p><p>国际非政府团体“无疆界记者”组织的报告认为，莫迪2014年上台以来，印度在新闻自由度年度排行中倒退了21位，在180个国家和地区中排行第161。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzM.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240419-%25E5%258D%25B0%25E5%25BA%25A6%25E5%25A4%25A7%25E9%2580%2589%25E5%2590%25AF%25E5%258A%25A8%25E6%258A%2595%25E7%25A5%25A8%25EF%25BC%258C%25E8%258E%25AB%25E8%25BF%25AA%25E8%2583%25BD%25E5%2590%25A6%25E8%259D%2589%25E8%2581%2594%25E7%25AC%25AC%25E4%25B8%2589%25E4%25BB%25BB%25E6%259C%259F6%25E6%259C%2588%25E5%2588%259D%25E8%25A7%2581%25E5%2588%2586%25E6%2599%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzM.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
