--- a/articles/rfi/999984.md
+++ b/articles/rfi/999984.md
@@ -1,5 +1,5 @@
-<!--1713498301000-->
-[赖清德5.20前 台湾国民党议员前赴后继去中国表“善意”但拆台](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240418-%E8%B5%96%E6%B8%85%E5%BE%B75-20%E5%89%8D-%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8-%E5%96%84%E6%84%8F-%E4%BD%86%E6%8B%86%E5%8F%B0)
+<!--1713537902000-->
+[阿根廷与北约建立伙伴关系迈出第一步](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5)
 ------
 
-<div>18/04/2024 - 16:56</div><img src="https://s.rfi.fr/media/display/218be9b6-5261-11ee-b729-005056a90321/w:1280/p:16x9/AP23235304939235.jpg"><p><strong>台湾各种立场媒体均聚焦国民党立委傅崐萁将率领党内立委访问中国，该团人数透露为20人。此前，台湾立法院国民党团被抓包作弊匿名顶替不在场议员卢县一投票，曝出卢县一当天人在中国秘密行踪。再此前，消息传台湾立法院长国民党人韩国瑜被邀请组团前往中国访问。再再此前，多家消息称，马英九后台湾另一国民党政治大佬或要访问中国。这些互动被冠以民间善意促进沟通。但此善意也被怀疑是对赖清德5.20任职拆台破坏，吃里扒外。        </strong></p><div><p>据上报消息，国民党立委傅崐萁将率领党内立委访问中国，国民党文传会主委李彦秀昨天表示此行程由傅崐萁个人规划并安排，不过国民党今天（18日）澄清，傅崐萁等人访中行程将针对台湾人民关心的两岸民生经济议题，进行充分沟通与交流，并反映多数台湾民意期望两岸和平交流的心声，维系两岸人民的利益与福祉。</p><p>国民党指出，傅崐萁于今年2月开始联系访中事宜，国民党乐见国会同志肩负起维系两岸民间良善对话的责任，也对于台湾人民关心的农渔产品行销、旅游观光等民生经济议题，与对岸进行协调与讨论，期望达到让两岸人民互惠双赢的目标。</p><p>据国民党强调，向来支持与对岸维系正常公开的交流与沟通，相信唯有增进两岸良性互动与累积善意，才能让台海免于战争的危险边缘，促进区域的和平稳定。</p><p>据新头壳消息，台湾立法院司法及法制委员会今天并案审查《刑法》加重虐童刑责等10案，邀请蔡碧仲等人列席报告并备质询。吴思瑶质询提问，上周五在立院表决时发生投票舞弊事件，当天卢县一出访中国，未至立院出席、签到，却有表决纪录；若此案进入地检署侦查或法院审理，应该会请相关当事人过去询问，包括议事人员、涉及立委等。</p><p>台湾没有消息提及卢县一前往中国事宜。是公干还是私事，一无所知。</p><p>据新头壳稍早消息，继马习二会后，中国再度出招？据媒体透露，北京当局除了规划由国民党团总召傅崐萁组团访中后，在立院8月休会时，将邀请立法院长韩国瑜组团出访，将由中国人大委员长赵乐际亲自接待。</p><p>国民党立院党团总召傅崐萁近日将率20多名蓝委访问中国，由于时程仍在立院开议期间，遭外界批评是“薪水小偷”，国民党中央日前记者会更切割，强调行程内容党中央并不知情。</p><p>民进党团干事长吴思瑶进一步说好奇，责问傅崐萁这次带队率领蓝委去中国，到底是谁的授权？又是代表谁？</p><p>台湾媒体没有提及国民党议员前往中国是受国台办还是受中国人大邀请。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWq1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240418-%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B75-20%25E5%2589%258D-%25E5%258F%25B0%25E6%25B9%25BE%25E5%259B%25BD%25E6%25B0%2591%25E5%2585%259A%25E8%25AE%25AE%25E5%2591%2598%25E5%2589%258D%25E8%25B5%25B4%25E5%2590%258E%25E7%25BB%25A7%25E5%258E%25BB%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A1%25A8-%25E5%2596%2584%25E6%2584%258F-%25E4%25BD%2586%25E6%258B%2586%25E5%258F%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0%20-%20https%3A%2F%2Frfi.my%2FAWq1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0%20-%20https%3A%2F%2Frfi.my%2FAWq1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWq1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 15:09</div><img src="https://s.rfi.fr/media/display/6f37adba-fe4d-11ee-8194-005056bf30b7/w:1280/p:16x9/le%20secr%C3%A9taire%20g%C3%A9n%C3%A9ral%20d%C3%A9l%C3%A9gu%C3%A9%20Mircea%20Geoan%C4%83re%C3%A7u%20le%20ministre%20argentin%20de%20la%20D%C3%A9fense%20Luis%20Petriau%20si%C3%A8ge%20de%20l%E2%80%99OTAN%2018042024.PNG"><p><strong>北约副秘书长吉瓦纳(Mircea Geoană)4月18日在布鲁塞尔北约总部与阿根廷国防部长佩特里(Luis Petri)会面，双方讨论了北约与阿根廷之间伙伴关系的未来发展方向。        </strong></p><div><p>据北约网站4月19日更新的声明说，北约副秘书长米尔恰-吉瓦纳先生说：“我今天非常高兴地欢迎阿根廷国防部长。阿根廷是拉丁美洲的重要一员，我欢迎该国申请成为北约的合作伙伴。北约正在与世界各国合作，促进和平与稳定。阿根廷和北约都将受益于更密切的政治和务实合作”。</p><p>两位领导人还讨论了欧洲和拉丁美洲面临的安全挑战。北约副秘书长感谢阿根廷向乌克兰提供大量人道主义援助，特别是食品和药品，以及向难民提供的帮助。</p><p>这个声明说，北约与阿根廷的政治对话始于20世纪90年代初。布宜诺斯艾利斯随后为北约领导的波黑和平支援行动做出了贡献。哥伦比亚目前是北约在拉丁美洲的唯一伙伴国。而北约与阿根廷建立任何正式伙伴关系的决定都需要其32个盟国达成共识。</p><p>另据美联社说，阿根廷周四正式申请成为北约的合作伙伴。阿根廷总统米莱（Javier Milei）领导的右翼政府正致力于加强与北约成员国的关系并吸引投资，而这一合作伙伴地位将为加强阿根廷与西方的政治和安全合作扫清道路。</p><p>据介绍，对于那些不在北约地理区域内、无需参加集体军事行动的国家来说，“合作伙伴”是一个比"盟友"更有价值的角色。北约成员国目前仅限于欧洲、土耳其、加拿大和美国。</p><p>阿根廷总统府表示，北约这一指定，可使阿根廷获得以前无法获得的先进技术、安全系统和培训。</p><p>而北约副秘书长吉瓦纳在北约总部说，"阿根廷在拉丁美洲扮演着重要的角色"。双方"更紧密的政治和务实合作将使我们双方受益"。</p><p><strong>阿根廷购买丹麦F-16战机</strong></p><p>据法新社消息，丹麦和阿根廷本周二宣布，丹麦将向阿根廷出售24架二手F-16战斗机，阿根廷称，此次购买是其"过去50年中最重要的军事采购"。</p><p>在阿根廷国防部长佩特里访问丹麦的斯克里德斯特鲁普（Skrydstrup）空军基地期间，双方正式签署了这份军购协议。今年3月份双方公布了该交易的意向声明。</p><p>据丹麦媒体报道，丹麦正在将其机队升级为更现代化的 F-35。丹麦拥有大约40架F-16，其中约 30 架正在服役。丹麦也是北约的创建国之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E9%2598%25BF%25E6%25A0%25B9%25E5%25BB%25B7%25E4%25B8%258E%25E5%258C%2597%25E7%25BA%25A6%25E5%25BB%25BA%25E7%25AB%258B%25E4%25BC%2599%25E4%25BC%25B4%25E5%2585%25B3%25E7%25B3%25BB%25E8%25BF%2588%25E5%2587%25BA%25E7%25AC%25AC%25E4%25B8%2580%25E6%25AD%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
