--- a/articles/rfi/999985.md
+++ b/articles/rfi/999985.md
@@ -1,5 +1,5 @@
-<!--1713494701000-->
-[所罗门群岛反对派总理角逐者重申若当选将废除与中国的安全协议](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240418-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE)
+<!--1713532505000-->
+[尼日利亚成为世界上第一个抗脑膜炎新疫苗Men5CV疫苗的国家 - 健康时间](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E5%81%A5%E5%BA%B7%E6%97%B6%E9%97%B4/20240418-%E5%B0%BC%E6%97%A5%E5%88%A9%E4%BA%9A%E6%88%90%E4%B8%BA%E4%B8%96%E7%95%8C%E4%B8%8A%E7%AC%AC%E4%B8%80%E4%B8%AA%E6%8A%97%E8%84%91%E8%86%9C%E7%82%8E%E6%96%B0%E7%96%AB%E8%8B%97men5cv%E7%96%AB%E8%8B%97%E7%9A%84%E5%9B%BD%E5%AE%B6)
 ------
 
-<div>18/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/a21e0674-fcaf-11ee-8e20-005056bfb2b6/w:1280/p:16x9/AP24106049916145.jpg"><p><strong></strong></p><div><p>中国资助了多个重大项目，包括一座可容纳一万个座位的体育场和一座仍在建设中的医疗中心。</p><p>61 岁的罗伯特·巴拉 (Robert Bara) 住在首都附近一个泥泞的山谷里的村庄里，他担心没有足够的钱送孩子们上学。 他在前往一座用作投票站的教堂投票时说道：“我必须在经济上支持他们”。</p><p>组织这样的投票对这个群岛来说是一个挑战，这个拥有约 72 万居民的国家分布在数百个火山岛屿和环礁上，投票箱和选票是通过船只、飞机和直升机运送的。</p><p>来自澳大利亚、新西兰和巴布亚新几内亚的警察协助当地执法。</p><p>为了应对可能发生的暴力事件，位于霍尼亚拉市中心的中国大使馆本周在大楼前匆忙竖起了临时钢栅栏。</p><p>这是所罗门群岛自2019年与台湾断绝外交关系以来的首次选举。</p><p>所罗门群岛在总理玛纳西·索加瓦雷 (Manasseh Sogavare) 2019年上台，将所罗门群岛的外交关系从台湾转向北京。索加瓦雷于 2022 年与北京签署了一项秘密安全协议。</p><p>尽管该协议的细节仍不清楚，但华盛顿和堪培拉担心它将为中国在南太平洋建立永久性军事基地奠定基础，这可能会改变地区安全的游戏规则。</p><p>玛纳西·索加瓦雷的主要竞争对手之一是前联合国律师彼得·凯尼洛里，他希望挑战与中国的协议。 其他反对派人物包括人权活动家马修·韦尔和前总理、经济学家戈登·达西·利洛。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%258F%258D%25E5%25AF%25B9%25E6%25B4%25BE%25E6%2580%25BB%25E7%2590%2586%25E8%25A7%2592%25E9%2580%2590%25E8%2580%2585%25E9%2587%258D%25E7%2594%25B3%25E8%258B%25A5%25E5%25BD%2593%25E9%2580%2589%25E5%25B0%2586%25E5%25BA%259F%25E9%2599%25A4%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E7%259A%2584%25E5%25AE%2589%25E5%2585%25A8%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWt8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWt8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 23:26</div><img src="https://s.rfi.fr/media/display/63f9ea44-7000-11ed-a917-005056bfb2b6/w:1280/p:16x9/pexels-chokniti-khongchum-2280568-1.jpg"><p><strong>尼日利亚成为世界上第一个推出世界卫生组织推荐的新疫苗Men5CV疫苗的国家，可以防止人们感染五种脑膜炎球菌菌株。根据世界卫生组织消息，全球疫苗免疫联盟为这次疫苗和紧急疫苗接种活动以及全球脑膜炎疫苗储备提供了资金，并通过开展常规脑膜炎疫苗接种活动为低收入国家提供支持。                    </strong></p><div><p>尼日利亚位于非洲脑膜炎带，是非洲26个脑膜炎高度流行国家之一。去年，非洲各地报告的脑膜炎病例增加了50%。</p><p>世界卫生组织表示，尼日利亚在2023年10月1日至2024年3月11日期间暴发了血清型C脑膜炎奈瑟菌疫情，导致1742例疑似脑膜炎病例，包括在尼日利亚36个州中的7个州（阿达马瓦、包奇、贡贝、吉加瓦、卡齐纳、约贝、赞法拉州）出现101例确诊病例和153例死亡。</p><p>为了平息这场致命的疫情，尼日利亚在2024年3月25日至28日期间开展了一次免疫接种运动，最初为100多万1-29岁人群接种疫苗。</p><p>这种革命性的新疫苗在一次注射中提供对抗五种主要脑膜炎球菌菌株（A、C、W、Y和X）的强大屏障。这五种菌株都会引起脑膜炎和血液中毒。这比目前在非洲大部分地区使用的疫苗提供了更广泛的保护，目前使用的疫苗仅对A菌株有效。</p><p>这种新疫苗有可能大幅减少脑膜炎病例，并推动在战胜脑膜炎方面取得进展。这对于像尼日利亚这样流行多种血清型脑膜炎的国家尤其重要。这种新疫苗采用了与在尼日利亚消灭了A型脑膜炎球菌疫情的A型脑膜炎结合疫苗（MenAfriVac®）相同的技术。</p><p>这种新的多价结合疫苗的研发历时13年，是在帕斯适宜卫生科技组织与印度血清研究所开展合作的基础上研制出来的。英国政府外交、联邦和发展事务部提供的资金对其研发成功至关重要。</p><p>2023年7月，世卫组织对新的Men5CV疫苗（品牌名称为MenFive®）进行了预认证，并于2023年10月向各国发布了推出这种新疫苗的正式建议。2023年12月，全球疫苗免疫联盟为推出Men5CV疫苗分配了资源，目前可通过国际疫苗供应协调小组管理的应急储备为疫情应对提供疫苗，而通过大规模预防运动推出的疫苗接种活动预计将在2025年在脑膜炎地带国家开始。</p><p>世界卫生组织说，继尼日利亚发起脑膜炎疫苗接种运动之后，2024年4月在巴黎举行的脑膜炎问题国际峰会是在战胜脑膜炎道路上的又一个重要里程碑，各国领导人将在峰会上确定当前面临的挑战，评估下一步应采取的措施。这也为国家领导人和主要合作伙伴在政治和财政上作出承诺以便作为一个公共卫生问题加快实现到2030年消除脑膜炎的目标提供了一个机会。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%AE%89%E4%B8%9C%E5%B0%BC/" title="安东尼">安东尼</a></div></div></div></div>
