--- a/articles/rfi/999991.md
+++ b/articles/rfi/999991.md
@@ -1,5 +1,5 @@
-<!--1713476702000-->
-[乌克兰称成功袭击克里米亚俄机场 俄军空袭乌北部城市](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA-%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82)
+<!--1713494701000-->
+[伊朗袭击以色列后 中俄联合支持德黑兰对抗华盛顿](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240418-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF)
 ------
 
-<div>18/04/2024 - 22:36</div><img src="https://s.rfi.fr/media/display/c27b141e-fccf-11ee-a8c2-005056bf30b7/w:1280/p:16x9/2024-04-17T144304Z_1281641736_RC2987ATK3R3_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>乌克兰18日说，其部队已袭击被吞并的克里米亚半岛上一座大型俄罗斯机场，摧毁大批军事装备。        </strong></p><div><p>据法新社报导，这次袭击发生在17日凌晨，地点在赞科伊（Dzhankoi）附近的一座空军基地，这座空军基地位于莫斯科于2014年占领的克里米亚半岛北部。</p><p>乌克兰军事情报部门说，这次行动很成功，破坏雷达和防空系统和其他目标。 情报部门说：正在查明被摧毁或损坏的敌方航空器数量，以及俄罗斯占领军伤亡人数。</p><p>乌克兰社交媒体前一天曾经流传了据称显示机场爆炸和警报声的视频，但基辅并没有立即发表评论。 乌克兰总统泽连斯基随后在晚间演说中证实他的部队发动了这次袭击，并感谢军方“正确的打击占领者。</p><p><strong>俄军17日空袭乌北部城市 死亡增至 18人 另有78人受伤</strong></p><p>另据中央社18日的综合报导：俄罗斯军队17日空袭了乌克兰北部城市切尔尼戈夫（Chernihiv），期间有3枚导弹击中市中心，乌方官员18日表示，这波攻击造成的死亡人数已升至18人，还有78人受伤。</p><p>路透社报导还说，17日俄军袭击破坏了切尔尼戈夫市的民用基础设施，这是俄罗斯近几周来发动的最致命空袭，乌克兰高层官员也呼吁各国提供更多防空支援。 乌克兰切尔尼戈夫州州长曹斯（Vyacheslav Chaus）在通讯软体Telegram发文写道，搜救行动已经在今天早上结束。</p><p>俄罗斯全面侵略乌克兰的战争已进入第3年，俄国当局否认在这场战争中锁定平民发动攻击。 但切尔尼戈夫代理市长洛马柯（Oleksandr Lomako）17日向当地电视台表示：不幸的是，俄罗斯持续向平民和民用基础设施发动恐怖攻击，针对切尔尼戈夫的袭击再次证实了这 一点。</p><p><strong>布林肯4月23日前往中国访问4天</strong></p><p>此外，美国政治新闻网Politico报导，据1位驻华盛顿外交官和3位了解布林肯行程计画的美国官员透露，布林肯将 在4月23日启程前往中国，进行为期4天的访问。 所有人都被要求匿名，因为他们无权公开谈论这次旅行。 这是布林肯自去年6月以来第二次访问中国。</p><p>美国之音18日报导，美国国务院发言人米勒（Matthew Miller）近日表示，布林肯在访中期间预计将提出美国对于北京正在帮助俄罗斯建立国防工业基础，以延续乌克兰战争的关切。 自俄罗斯在2022年2月全面入侵乌克兰以来，美国就警告中国不要帮助莫斯科的战争行动。</p><p>据华尔街日报近日报导，美国官员称，中国在俄乌战争关键阶段帮助俄国恢复军工生产，为莫斯科提供光学、微电子、无人机发动机和其他军民两用材料，让俄国得以显著增强战场能力。 美方官员私下指出，俄国重振军工产能的速度快于他们预期，可能就是得利于这种外援。 随后中国驻美国大使馆发言人刘鹏宇否认，指中国不是乌克兰危机的制造者或当事方；中方一直在支持政治解决方面发挥建设性作用。 刘鹏宇强调，中国没有向（冲突）任何一方提供武器，中国和俄罗斯之间的正常贸易不应受到干涉和限制。 他说，中国不站在任何一边，并要求美方不要干扰北京和莫斯科之间的正常关系。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%25A7%25B0%25E6%2588%2590%25E5%258A%259F%25E8%25A2%25AD%25E5%2587%25BB%25E5%2585%258B%25E9%2587%258C%25E7%25B1%25B3%25E4%25BA%259A%25E4%25BF%2584%25E6%259C%25BA%25E5%259C%25BA-%25E4%25BF%2584%25E5%2586%259B%25E7%25A9%25BA%25E8%25A2%25AD%25E4%25B9%258C%25E5%258C%2597%25E9%2583%25A8%25E5%259F%258E%25E5%25B8%2582&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%20-%20https%3A%2F%2Frfi.my%2FAWt1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%20-%20https%3A%2F%2Frfi.my%2FAWt1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 20:12</div><img src="https://s.rfi.fr/media/display/07af6fa4-fc93-11ee-8851-005056a97e36/w:1280/p:16x9/e1d8ce33b89d57ff07354d9cb2a904726a60f587.jpg"><p><strong>莫斯科和北京并未谴责伊朗对以色列领土的袭击，但他们将这场危机视为挑拨西方与世界其他国家之间关系的机会。这是世界报的两名莫斯科特派记者勒梅特及维特金共同撰写报道指出的。         </strong></p><div><p>在伊朗与以色列之间的危机中，在大多数国家一致呼吁克制的背后，俄罗斯和中国外交立场却是坚决站在伊朗一边。 </p><p style="text-align:left">莫斯科和北京都没有谴责德黑兰在4月13日星期六晚上至4月14日星期日发动的大规模空袭。 相反，中国外交部长王毅周一与伊朗外长侯赛因·阿米尔·阿卜杜拉希安通电话提醒说，“中方强烈谴责并坚决反对针对伊朗驻大马士革使馆领事部的袭击事件”(发生在4月1日)，这是根据中国官方媒体新华社发布的这项谈话报道。 </p><p style="text-align:left">另一方面，北京“注意到伊朗的声明，即所采取的行动是有限的，并构成自卫行为”。 弗拉基米尔·普京周二(16日也指出，在与伊朗外长易卜拉欣·拉伊西的通话中，伊朗展现了希望“避免局势进一步升级”的意愿。 </p><p style="text-align:left">俄罗斯常驻联合国代表瓦西里·内本齐亚(Vassilyi Nebenzia)前一天已经提到伊朗的“合法回应”，并倾向于强调西方在此事上的“虚伪”。俄罗斯外交发言人玛丽亚·扎哈罗娃对以色列驻莫斯科大使西蒙娜·加尔佩林说：“西蒙娜，请您提醒我何时以色列谴责了基辅政权对俄罗斯领土的袭击。” </p><p style="text-align:left">俄罗斯的宣传渠道甚至对伊朗的袭击表现出某种形式的兴奋，首先描述了德黑兰的“胜利”和以色列的“恐慌”，然后采用了系列词句：“有限打击”具有简单的“警告”意义。 NTV 频道周一表示：“伊朗已成为穆斯林世界的重心，” </p><p style="text-align:left">伊朗是莫斯科的重要盟友： 在所采取的这些态度立场上 </p><p style="text-align:left">不仅仅是对于重要合作伙伴展现出很好的举止。 伊朗是莫斯科在对乌克兰战争中的重要盟友，并向俄罗斯提供无人机和导弹。  </p><p style="text-align:left">伊朗也是北京的主要石油供应国之一，北京一直反对对德黑兰实施制裁。 3月中旬，中国、俄罗斯、伊朗三国仍在阿拉伯海进行联合军事演习。 </p><p style="text-align:left">俄罗斯和中国的立场首先与 2023 年 10 月 7 日哈马斯袭击以色列后所做出的转变一致，中俄两国拖到很晚才谴责以色列，而且往往措辞含糊。  </p><p style="text-align:left">自此，北京在中东事务上极力采取与美国和七国集团截然相反的立场，自诩为“南方国家”的代言人。 </p><p style="text-align:left">正是以与西方面对面的名义，莫斯科牺牲了与以色列的良好关系以及迄今为止以平衡为考量的地区政策。  </p><p style="text-align:left">乌克兰战争是俄罗斯的绝对优先要务，中东的紧张局势是透过这个棱镜来分析的。  </p><p style="text-align:left">这种紧张情势是在西方与世界其他国家之间制造隔阂的一种手段，希望看到西方的注意力和资源分散，从而损害基辅。 对此，媒体援引俄罗斯分析师的话说，紧张局势的升级可能导致能源价格上涨，这对俄罗斯经济有利。 </p><p style="text-align:left">然而，失控的大火对于莫斯科和北京都没有任何好处。该地区不仅对中国的能源供应至关重要，而且没有任何迹象表明伊朗政权将会抵御过于残酷的震荡和冲击。反过来看，这个问题也适用于莫斯科在该地区的主要支持的对象--大马士革。 军事升级还可能削弱德黑兰向莫斯科供应武器的能力。 </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWsJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240418-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E4%25B8%25AD%25E4%25BF%2584%25E8%2581%2594%25E5%2590%2588%25E6%2594%25AF%25E6%258C%2581%25E5%25BE%25B7%25E9%25BB%2591%25E5%2585%25B0%25E5%25AF%25B9%25E6%258A%2597%25E5%258D%258E%25E7%259B%259B%25E9%25A1%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF%20-%20https%3A%2F%2Frfi.my%2FAWsJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF%20-%20https%3A%2F%2Frfi.my%2FAWsJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWsJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
