--- a/articles/rfi/999993.md
+++ b/articles/rfi/999993.md
@@ -1,5 +1,5 @@
-<!--1713476702000-->
-[前中国央行副行长范一飞涉贿受审](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1)
+<!--1713476703000-->
+[英国称要限制对中国投资](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84)
 ------
 
-<div>18/04/2024 - 17:14</div><img src="https://s.rfi.fr/media/display/f3fb03a4-0d6f-11ea-b03f-005056bfe576/w:1280/p:16x9/2011-08-11T800-CHINA-YUAN-MIDDAY_0.JPG"><p><strong>遭指“靠金融吃金融”的前中国人民银行（中国央行）副行长范一飞，被控自1993年起，29年内非法收受财物共计折合人民币3.86亿余元。湖北省黄冈市中级人民法院18日公开审理范一飞受贿一案。        </strong></p><div><p>据中央社今天引述中国官方消息，湖北省黄冈市人民检察院起诉指控，1993年至2022年，范一飞利用在前中国人民建设银行信托投资公司任职，在中国建设银行官至副行长，担任中国投资有限责任公司副总经理兼上海银行董事长，及中国人民银行党委委员、副行长等职务上的便利，透过其他国家工作人员职务上的行为，为有关单位和个人在贷款融资、业务承揽、工作调动等事项上提供帮助，直接或者通过其特定关系人非法收受财物共计折合3.86亿余元。</p><p>消息说，范一飞当庭表示认罪悔罪。</p><p>法庭宣布择期宣判。</p><p>北京青年报旗下新媒体“政知见”指出，范一飞长期在金融系统任职，2015年调往中国人行担任副行长时，是当时央行领导班子中最年轻的成员。2022年11月，范一飞在任上被查落马。2023年5月，他被开除党籍和公职。</p><p>据中共中央纪委国家监委的通报指出，范一飞为官不廉，毫无法纪底线且胆大妄为，靠金融吃金融、以钱生钱，长期以“投资”为名大搞权钱交易，利用职务便利为他人在贷款融资、企业经营等方面谋利，并非法收受巨额财物。</p><p>该报道称，今年1月上旬，中国央视播出年度反腐大片“持续发力纵深推进”，范一飞还出镜忏悔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWqH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%2589%258D%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A4%25AE%25E8%25A1%258C%25E5%2589%25AF%25E8%25A1%258C%25E9%2595%25BF%25E8%258C%2583%25E4%25B8%2580%25E9%25A3%259E%25E6%25B6%2589%25E8%25B4%25BF%25E5%258F%2597%25E5%25AE%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1%20-%20https%3A%2F%2Frfi.my%2FAWqH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1%20-%20https%3A%2F%2Frfi.my%2FAWqH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWqH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 14:07</div><img src="https://s.rfi.fr/media/display/65e6582a-fac9-11ed-a60a-005056a90321/w:1280/p:16x9/000_33EF3VR.jpg"><p><strong>英国首相苏纳克(Rishi Sunak)政府将推出一揽子措施，加大对中国贸易和投资的限制。苏纳克的最高副手警告称，英国的开放经济面临前所未有的威胁。        </strong></p><div><p>据POLITICO今天报道称，英国暗示可能在“降低风险”的推动下限制中国投资。这些措施在一定程度上兑现了苏纳克向美国总统拜登做出的承诺。</p><p>英国副首相奥利弗·道登应于周四今天在伦敦举行的一次具有里程碑意义的演讲中宣布该计划，他在演讲中表示，在冷战以来地缘政治紧张程度最高的情况下，英国必须“清醒地”认识到英国经济面临的威胁。道登将表示，英国面临“我们的自由、繁荣和安全之间的谨慎平衡”。</p><p>但他说，虽然“我们不会与全球经济脱钩”，但英国“必须通过收紧出口管制和海外投资来降低风险”，这些投资可能为中国等战略竞争对手的技术提供资金。</p><p>道登在演讲前对《Politico》杂志表示，英国“需要留意”对外投资，“这些投资正在被用来促进、支持和帮助对手的战略提升”。</p><p>但他也说，在境外投资方面，“对我来说，施加任何形式的限制都有很高的门槛。”虽然英国历史上的开放性一直是一个优势，但“我们必须清醒地认识到，我们体系的一大优势也带来了漏洞。”</p><p>英国采取上述举措之前，拜登于去年八月签署了一项行政命令，限制半导体、人工智能和量子等战略领域的对外投资。</p><p>一项调查显示，苏纳克六月访问白宫，期间他“承诺”英国建立对外投资审查制度，能够“评估投资带来的潜在国家安全风险”由 POLITICO 发布，并在商业和贸易部访问后不久分发给企业。</p><p>道登目前正在指示该部门改善对中国等战略竞争对手的新兴技术的出口管制，并组建一个新团队来分析英国政府从对外投资风险调查中获得的数据。</p><p>道登表示，这是他一直与英国盟友一起“努力解决”的问题。他说，英国拥有价值约 13 万亿英镑的外部投资股票。 “这为英国创造了价值数千亿英镑的收入，因此这对我们来说非常有价值。”</p><p>道登表示，政府希望利用《国家安全与投资法案》来筛选对英国的外国直接投资，而不是建立一个新制度，以遏制资金流向中国等战略竞争对手的敏感技术。</p><p>它将就投资何时可能提示风险发布进一步指导，并就添加涵盖关键矿物和半导体的新类别进行磋商。</p><p>与此同时，道登将宣布将对流入英国的交易的强制性报告要求进行修改，并提供“少量有针对性的豁免”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWnm.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E8%258B%25B1%25E5%259B%25BD%25E7%25A7%25B0%25E8%25A6%2581%25E9%2599%2590%25E5%2588%25B6%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E6%258A%2595%25E8%25B5%2584&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84%20-%20https%3A%2F%2Frfi.my%2FAWnm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84%20-%20https%3A%2F%2Frfi.my%2FAWnm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWnm.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
