--- a/articles/rfi/999994.md
+++ b/articles/rfi/999994.md
@@ -1,5 +1,5 @@
-<!--1713451513000-->
-[港府疑以行政手段消弭法庭裁决 记协获批就车牌查册新安排违宪提覆核](https://www.rfi.fr/cn/%E9%A6%99%E6%B8%AF/20240418-%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3-%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8)
+<!--1713476702000-->
+[中美贸易战阴云乱 台美贸易谈判向前看 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240418-%E4%B8%AD%E7%BE%8E%E8%B4%B8%E6%98%93%E6%88%98%E9%98%B4%E4%BA%91%E4%B9%B1-%E5%8F%B0%E7%BE%8E%E8%B4%B8%E6%98%93%E8%B0%88%E5%88%A4%E5%90%91%E5%89%8D%E7%9C%8B)
 ------
 
-<div>18/04/2024 - 10:07</div><img src="https://s.rfi.fr/media/display/74d37194-fd5a-11ee-a779-005056a90284/w:1280/p:16x9/18.4%20%E8%94%A1%E7%8E%89%E7%8E%B2%E5%8B%9D%E8%A8%B4%EF%BC%8C%E4%BD%86%E8%A3%81%E6%B1%BA%E6%8C%87%E6%96%B0%E8%81%9E%E6%87%89%E5%B1%AC%E8%BB%8A%E7%89%8C%E6%9F%A5%E5%86%8A%E7%9B%AE%E7%9A%84%E4%B9%8B%E8%A3%81%E6%B1%BA%EF%BC%8C%E8%A2%AB%E9%81%8B%E8%BC%B8%E7%BD%B2%E7%9A%84%E6%96%B0%E5%AE%89%E6%8E%92%E5%BC%84%E8%87%B3%E6%9C%89%E7%AD%89%E6%96%BC%E7%84%A1%E3%80%82%28%E7%B6%B2%E4%B8%8A%E8%B3%87%E6%96%99%E5%9C%96%E7%89%87%29.gif"><p><strong>香港的最高级法院早前裁定，新闻调查应包含在查阅车辆登记资料(俗称「查册」)的选项中，运输部门其後修订政策，把新闻用途列入查册用途，但须经书面申请并详细列出目的及相关资料，再由运输署长审批，但新政策实施三个多月以来，署方从未批出任何一宗申请。香港记者协会(记协)为此提出司法覆核，指署方的拖延手法对言论及新闻自由构成不正当限制，要求颁令裁定新政策违宪，获法庭批准，稍後排期正式聆讯。        </strong></p><div><p>运输署因应最高级的终审法院裁决，於1月8日实施收紧车辆查册的新安排，根据《申请车辆登记细节证明书的指引》，新闻采访不属於可以自动查册的三个目的之一，而是须经运输署长审批的「例外情况」，而作出书面申请时须同时提交详细资料，令署长信纳申请符合「重大公众利益」丶资料不会被滥用等条件，才会获批查册。</p><p>网媒《集志社》本月初报道，截至上月底，运输署接获的16 宗「例外情况」申请，暂没成功个案，其中七宗撤回丶一宗遭拒丶八宗仍在处理中，当中半数被署方要求提交进一步资料。申请绝大部份属新闻用途申请，占 13宗，涉及四家新闻机构。</p><p>记协就此於本月5日入禀高等法院申请司法覆核，指署方的新安排与言论和新闻自由原则不一致，不合理地要求记者就其调查提交巨细无遗的资料，包括申请符合哪些公众利益？为何记者手上资料不足以报道等，认为有关要求是对新闻行业的误解，与人权原则不符。</p><p>记协又指出，自新措施实施三个多月来，署方处理为新闻采访目的而查册的申请，不合理地漫长及缓慢，至今未有任何记者成功查册，显见有关做法等同拒绝申请，与终审法院就相关案件的判决有冲突，要求法庭颁令《指引》不符合《香港人权法案条例》及《基本法》下对新闻及言论自由的保障，属越权或违宪，并要求法庭下令署方须迅速及在合理时间内对新闻用途的查册申请作出决定。</p><p>高等法院法官高浩文昨(17日)天颁下书面判决，向记协批出司法覆核许可，并着记协与运输署双方在两周内提供日期，以便排期正审，但日期不会早於7月。</p><p>事缘时任香港电台《铿锵集》编导蔡玉玲因跟进 「7.21 」元朗地铁站袭击事件丶以新闻目的向运输署申请车牌查册，但被指虚报资料，被判罪名成立，她一直上於至终审法院才获判胜诉。终院在裁决中指出，运输署无理由将「真诚的新闻调查」，例如怀疑车主使用其车辆干犯某罪行，排除在车牌查册目的的所有选项以外。署方於1月推出查册新指引。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWka.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%25A6%2599%25E6%25B8%25AF%2F20240418-%25E6%25B8%25AF%25E5%25BA%259C%25E7%2596%2591%25E4%25BB%25A5%25E8%25A1%258C%25E6%2594%25BF%25E6%2589%258B%25E6%25AE%25B5%25E6%25B6%2588%25E5%25BC%25AD%25E6%25B3%2595%25E5%25BA%25AD%25E8%25A3%2581%25E5%2586%25B3-%25E8%25AE%25B0%25E5%258D%258F%25E8%258E%25B7%25E6%2589%25B9%25E5%25B0%25B1%25E8%25BD%25A6%25E7%2589%258C%25E6%259F%25A5%25E5%2586%258C%25E6%2596%25B0%25E5%25AE%2589%25E6%258E%2592%25E8%25BF%259D%25E5%25AE%25AA%25E6%258F%2590%25E8%25A6%2586%25E6%25A0%25B8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8%20-%20https%3A%2F%2Frfi.my%2FAWka.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8%20-%20https%3A%2F%2Frfi.my%2FAWka.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWka.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B8%AF%E5%BA%9C%E7%96%91%E4%BB%A5%E8%A1%8C%E6%94%BF%E6%89%8B%E6%AE%B5%E6%B6%88%E5%BC%AD%E6%B3%95%E5%BA%AD%E8%A3%81%E5%86%B3%20%E8%AE%B0%E5%8D%8F%E8%8E%B7%E6%89%B9%E5%B0%B1%E8%BD%A6%E7%89%8C%E6%9F%A5%E5%86%8C%E6%96%B0%E5%AE%89%E6%8E%92%E8%BF%9D%E5%AE%AA%E6%8F%90%E8%A6%86%E6%A0%B8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 21:21</div><img src="https://s.rfi.fr/media/display/da2a9e26-fb17-11ea-875a-005056bff430/w:1280/p:16x9/2020-09-20T073526Z_1670149232_RC272J9D8GQZ_RTRMADP_3_TAIWAN-JAPAN-CHINA.JPG"><p><strong>针对美国政府计划将中国钢铝产品的关税提高百分之二十五，中国商务部4月18日批评美方“转嫁矛盾”的做法是“一错再错”。中美贸易战火药味又一次散布全球之时，台美间的贸易谈判却前景乐观，且一直按部就班地向前发展。                    </strong></p><div><p>美国总统拜登17日向美国钢铁工人联合会（United Steelworkers）会员发表演讲，批评中国政府高额大量补贴，导致中国以不公平的低价向全球市场倾销远超过自身需求的钢铁。 他批评，早在2000年代初，宾州及俄亥俄州的钢铁产业就因此受到严重打击。 拜登指出，美国贸易代表戴琪（Katherine Tai）正在调查中国政府在钢铁和铝方面的贸易行为，如果证实有反竞争的情形，他会敦促戴琪将中国钢、铝税率提高到25%， 而目前这些产品的关税仅有7.5%，或根本不加征关税。</p><p><strong>中国商务部批美错上加错</strong></p><p>中国商务部官网18日晚以不具名的发言人名义，就此事回应称，美方对中国的指责“没有事实依据”，相关措施是典型的“单边主义、保护主义”做法，中方对此坚决反对。 发言人说，2018年以来，美国以“国家安全”之名，对全球贸易伙伴钢铝产品选择性加征关税，还以此胁迫贸易伙伴接受不公平条件。 美方相关措施已被世贸组织裁定违反世贸规则。</p><p>中国商务部发言人声称，美方无视国际经贸秩序和规则，将经贸问题政治化，“滥用所谓301关税复审程序，公开要求随意调整对中国产品关税，转嫁矛盾，是一错再错，也无助 于解决美国内产业面临的问题”。 美国施压别国限制中国产品，更将破坏全球产业链供应链的安全稳定。</p><p>该发言人表示，中方敦促美方正视自身问题，停止提高对中国产品关税，并立即取消对中国加征关税措施。 中方将采取一切必要措施，捍卫自身权益。</p><p><strong>台美贸易谈判向前看</strong></p><p>当中国大陆面临与美国的又一次贸易战阴云的时候，台湾与美国的经贸关系不断稳步向前。</p><p>台美去年6月在华盛顿签署了21世纪贸易倡议首批协定，涵盖关务行政及贸易便捷化、良好法制作业、服务业国内规章、反贪腐、中小企业等5项议题。第二阶段谈判将聚焦农业、劳动与环境3大议题，作业持续进行中。</p><p>美国贸易代表署应美国国会的要求公开了谈判3大议题的拟议文本，内容涉及食品安全、环境正义及远洋移工权益。美方建议提升农产品进口许可程序及认证要求的透明度，也要提高环境保护水准和移工劳权等领域议题。但这些都是双方讨论过程中有共识，或早已是台湾目标愿景。 比如，美方关心远洋渔船上的工作条件，台湾在渔业与人权行动计画（Action Plan for Fisheries and Human Rights）中也有相关规范。</p><p>台湾谈判官员认为，台美21世纪贸易倡议第二阶段谈判整体方向没有问题，正持续分组、分议题密集举行会前会，只是内容牵涉细节法规，必须一步步往前，需要一定时间，未来实体谈判将在台湾举行，但时间未定。</p><p><strong>台美 台英 台加三项贸易投资协议</strong></p><p>过去台湾只与新加坡、新西兰和有关邦交国之间存在自由贸易协定，数量偏低并在国际贸易整合上处境孤立。但继去年6月“台美21世纪贸易倡议”（U.S.-Taiwan Initiative on 21st-Century Trade）首批协定签署后，台湾去年11月与英国签署“深化贸易伙伴关系协议”（Enhanced Trade Partnership Arrangement）， 去年12月则与加拿大签署“投资促进及保障协议”（Foreign Investment Promotion and Protection Arrangement）。</p><p>台湾方面认为：如果台美避免双重课税协定也能完成，将对台美双边经贸打下更坚定基础。台湾也希望强化与澳洲和印度的贸易伙伴关系，因为印度和台湾具备持续推动贸易协议的基础。台湾投资将有助印度发展其制造业基础设施。印度正与中国竞争全球制造中心的地位，对台湾来说，这代表有加强 商业合作的机会。</p><p><strong>蔡英文期望：未来台湾能加入跨太平洋伙伴全面进步协定（CPTPP）</strong></p><p>今年3月7日，台湾总统蔡英文出席任内最后一次外交部新春联欢晚会时表示：过去8年政府积极改善基础建设、厚植国力，吸引外商投资台湾，协助产业布局全球，台湾与美国、日本、欧洲及新南向国家的经贸往来大幅成长。</p><p>她也特别指出：去年完成了签署台美21世纪贸易倡议首批协定，也和英国、加拿大分别签署提升贸易伙伴关系协议及投资促进及保障协议。她期待：未来台湾能加入跨太平洋伙伴全面进步协定（CPTPP） ，继续加强与全球经贸连结。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div>
